--- a/ᏍᏆᏂ_ᎧᏬᏂᎯᏍᏗ.mw
+++ b/ᏍᏆᏂ_ᎧᏬᏂᎯᏍᏗ.mw
@@ -4,7 +4,7 @@
 ==ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ==
 <div style="font-size:100%;-moz-column-count:2; column-count:2;">
 *[[United States|ᎠᎹᏰᏟ]]<ref name=CLDR>Common Locale Data Repository for Cherokee / Tsalagi. 2010.</ref>
-*[[Mexico|ᏍᏆᏂᏱ]]<ref name=CLDR/>
+*[[Mexico|ᎠᏂᏍᏆᏂᎢ]]<ref name=CLDR/>
 * [[Spain|ᏍᏆᏂ]]
 * [[Argentina]]
 * [[Bolivia|ᏬᎵᏮᎠ]]
