tried to clean up and transliterate a bit

--- a/ᎠᎺᏉᎯ_ᎤᏁᏍᏓᎳ.mw
+++ b/ᎠᎺᏉᎯ_ᎤᏁᏍᏓᎳ.mw
@@ -1,5 +1,5 @@
 [[image:1YrIceFlow.png|thumb|right| [[icebreaker]] ᎠᏂᎩᏍᏗ ᏥᏳ ᏗᎬᏩᎶᏒ ᎠᏲᎵ (1 ᏑᏕᏘᏴᏓ) ᎠᎺᏉᎯ ᎤᏁᏍᏓᎳ]]
-'''ᎠᎺᏉᎯ ᎤᏁᏍᏓᎳ''' ᎨᏒᎢ ᎪᏢᎯ Ꭲgotlvhi ignelvhi ᏂᏛᎴᏅᏓ ᎠᎺᏉᎯ ᎠᎹ Ꮎ ᎤᏁᏍᏓᎳᏛᎯ. ᎢᎬᏂᏏᏍᎩ ᎯᎠ ᎠᎺᏉᎯ ᎠᎴ salty, ᎪᎯ ᏄᎵᏍᏔᏅ ᎾᎾᎢ ᎬᏩᏚᏫᏛ ᎪᏣᎴᏍᏗ 1.8 °[[Celsius|C]]. '''ᎦᏣᏄᎳ ᎤᏁᏍᏓᎳ''' <!-- redirects here! --> ᎨᏒᎢ ''ᎠᎺᏉᎯ ᎤᏁᏍᏓᎳ'' Ꮎ ᎤᎭ ᎤᏁᏍᏓᎳ ᎨᎳᏛᏍᏗ ᎠᎹᏳᎸᏗ ᎠᎴ ᎧᏁᏉᏍᏗ atsinuqowisgv ᏂᏛᎴᏅᏓ ᎦᏙᎯ. '''ᎦᏇᏅᏗ ᎤᏁᏍᏓᎳ''' ᎨᏒᎢ ᎤᎩᏓᎵ ᏌᏊ ᎢᎬᏁᎸᎯ ''ᎠᎺᏉᎯ ᎤᏁᏍᏓᎳ'' Ꮎ ᎨᏒᎢ ᎢᏳᏍᏗᏊ ᎬᏙᏗ ᏂᏛᎴᏅᏓ ᎦᏙᎯ ᎠᎴ ᏄᏚᏓᎸᎾ ᎤᎩᏓᎵ, ᎠᎴ ᎤᎭ ᏭᏪᏙᎢ blocked ᎾᎥᎢ ᎦᏙᎯ-ᎠᏠᏯᏍᏔᏅ ᎤᏁᏍᏓᎳ ᎾᎯᏳᎢ ᎤᏓᏂᏝᏅ tsuqagutanvsv. '''ᎤᏁᏍᏓᎳ floe''' ᎨᏒᎢ ᎤᎩᏓᎵ ᎢᎦᏛ ᎠᎺᏉᎯ ᎤᏁᏍᏓᎳ, Ꮎ ᎨᏒᎢ ᎦᏲᎵᎨ ᎬᎾᏬᏍᎬ 10 kilometers (ᏑᏓᎵ ᎢᏳᏟᎶᏛ) ᎭᏫᎾᏗᏢ Ꮝ ᏭᏔᏅ ᏂᎦᏅᎯᏒ. Wider ᎢᎦᏛ ᎤᏁᏍᏓᎳ ᎠᎴ ᎤᏯᏅᎲ '''ᎤᏁᏍᏓᎳ ᏕᎦᎶᎨᏒ'''.
+'''ᎠᎺᏉᎯ ᎤᏁᏍᏓᎳ''' ᎨᏒᎢ ᎪᏢᎯ ᎢᎪᏢᎯ ᎢgᏁᎸᎯ ᏂᏛᎴᏅᏓ ᎠᎺᏉᎯ ᎠᎹ Ꮎ ᎤᏁᏍᏓᎳᏛᎯ. ᎢᎬᏂᏏᏍᎩ ᎯᎠ ᎠᎺᏉᎯ ᎠᎴ salty, ᎪᎯ ᏄᎵᏍᏔᏅ ᎾᎾᎢ ᎬᏩᏚᏫᏛ ᎪᏣᎴᏍᏗ 1.8 °[[Celsius|C]]. '''ᎦᏣᏄᎳ ᎤᏁᏍᏓᎳ''' <!-- redirects here! --> ᎨᏒᎢ ''ᎠᎺᏉᎯ ᎤᏁᏍᏓᎳ'' Ꮎ ᎤᎭ ᎤᏁᏍᏓᎳ ᎨᎳᏛᏍᏗ ᎠᎹᏳᎸᏗ ᎠᎴ ᎧᏁᏉᏍᏗ ᎠᏥᏄᏉᏫᏍᎬ ᏂᏛᎴᏅᏓ ᎦᏙᎯ. '''ᎦᏇᏅᏗ ᎤᏁᏍᏓᎳ''' ᎨᏒᎢ ᎤᎩᏓᎵ ᏌᏊ ᎢᎬᏁᎸᎯ ''ᎠᎺᏉᎯ ᎤᏁᏍᏓᎳ'' Ꮎ ᎨᏒᎢ ᎢᏳᏍᏗᏊ ᎬᏙᏗ ᏂᏛᎴᏅᏓ ᎦᏙᎯ ᎠᎴ ᏄᏚᏓᎸᎾ ᎤᎩᏓᎵ, ᎠᎴ ᎤᎭ ᏭᏪᏙᎢ blocked ᎾᎥᎢ ᎦᏙᎯ-ᎠᏠᏯᏍᏔᏅ ᎤᏁᏍᏓᎳ ᎾᎯᏳᎢ ᎤᏓᏂᏝᏅ ᏧᏆᎫᎣᏔᏅᏒ. '''ᎤᏁᏍᏓᎳ floe''' ᎨᏒᎢ ᎤᎩᏓᎵ ᎢᎦᏛ ᎠᎺᏉᎯ ᎤᏁᏍᏓᎳ, Ꮎ ᎨᏒᎢ ᎦᏲᎵᎨ ᎬᎾᏬᏍᎬ 10 kilometers (ᏑᏓᎵ ᎢᏳᏟᎶᏛ) ᎭᏫᎾᏗᏢ Ꮝ ᏭᏔᏅ ᏂᎦᏅᎯᏒ. Wider ᎢᎦᏛ ᎤᏁᏍᏓᎳ ᎠᎴ ᎤᏯᏅᎲ '''ᎤᏁᏍᏓᎳ ᏕᎦᎶᎨᏒ'''.
 [[image:Arctic Ice Thickness.gif|right||thumb|225px|[[NOAA]] Projected ᏗᎦᏘᎸᏍᏗ ᏗᎦᏁᏟᏴᏍᏗ]]
 ᎠᎺᏉᎯ ᎤᏁᏍᏓᎳ ᎠᎾᏍᎬᏘ ᎾᏍᏋ ᏧᏓᎴᎾᎢ ᎬᏙᏗ [[iceberg|ᎤᏴᏢ]], ᎦᏙ ᎤᏍᏗ ᎠᎴ ᎢᎦᏛ [[ice shelf|ᎤᏁᏍᏓᎳ ᎦᎷᎯᏍᏗ]] ᎠᎴ [[glacier|ᎤᏴᏢ]]Ꮎ calve ᎾᎾᎯ ᎯᎠ ᎠᎺᏉᎯ.
 ᎣᏂ ᏧᏩᎫᏛ 1979, ᎠᎺᏉᎯ ᎤᏁᏍᏓᎳ ᎤᎭ ᎠᏂᎦᏲᎵ ᎦᏛᎬᎢ ᎭᏫᎾᏗᏢ ᎯᎠ ᏗᎦᏘᎸᏍᏗ ᎠᎴ ᎤᏁᏉᏨᎯ ᎪᎳᎩ ᏂᎨᏒᎾ ᎭᏫᎾᏗᏢ ᎯᎠ ᏗᎦᏘᎸᏍᏗ.
@@ -11,20 +11,20 @@ __TOC__
 
 ᎾᏍᎩ ᎤᏩᏒ ᎯᎠ ᎦᏚᎢ ᏫᏚᏳᎪᏛ ᎠᎹ ᎤᏚᎸᏗ ᏄᎾᏛᏅ ᎤᏁᏌᏴᏟ ᎯᎠ ᎤᏴᏢ ᎪᏍᏓᏱ.  ᏫᏓᏲᎯᏍᏗ ᎯᎠ ᎦᏚᎢ ᏫᏚᏳᎪᏛ ᎠᏓᏠᏯᏍᏙᏗ ᎯᎠ ᎦᏚᎢ 100&ndash;150&nbsp;m, ᎡᎳᏗ ᎯᎠ [[pycnocline]] ᎤᏁᏉᏨᎯ ᎠᏫᏒᏗ.
 
-* ᎭᏫᎾᏗᏢ tohinusdv ᎠᎹ, ᎯᎠ ᎢᎬᏱ ᎠᎺᏉᎯ ᎤᏁᏍᏓᎳ ᎤᏙᏢᏒ ᎾᎿ ᎯᎠ ᎦᏚᎢ ᎨᏒᎢ ᎥᎢᏒᎢ ᏧᏓᎴᎿᎢ ᎤᏓᏅᏖᏗ ᎦᏙ ᎤᏍᏗ ᎠᎴᏅᏘᏍᎬ ᎠᎴ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᏙᏢᏒ ᎤᏍᏗ ᏙᏯᏗᏢ, ᎤᎩᏓᎵ ᎤᏩᎾᏕᏍᎩ ᎾᎿ ᎯᎠ ᎦᏚᎢ ᎠᎴ ᎠᏰᎵ ᎠᏍᏓᏅᏅ ᎦᏲᎵᎨ ᎬᎾᏬᏍᎬ 2-3&nbsp;mm. ᎠᏂᏏᏴᏫᎭ ᏙᏯᏗᏢ ᎤᎭ Ꮝ [[c-axis|c-ᎨᏛᏍᏛᎢ]] ᎠᎷᏚᎧᏘ ᎠᎴ ᎠᏛᏍᎦ ᏙᏯᏗᏢ ᏚᏦᏔᏩᏘ. ᎾᎾᎢ ᎤᏙᎯᏳ ᎪᏍᏓᏱ ᏯᏛᎿ ᏙᏯᏗᏢ ᎤᏙᏢᏒᎢ ᏗᏙᎳᎩ ᎠᏓᏁᎳᏅᎯ, ᎠᎴ ᎯᎠ ᎠᏛᏏᏒ ᎬᏙᏗ ᎤᏓᏅᏖᏗ ᎠᎩᏍᏗ ᎾᎿ hexagonal, ᎡᎶᎯ ᎤᏙᏢᏒ, ᎬᏙᏗ ᎦᏅᎯᏓ ᎤᏓᏂᎳᎯᎨ ᏗᏂᏃᎨᏂ ᏗᏓᏁᏍᏙᏗ atsinuqowisgv ᎦᏬᎯᎸᏙᏗ ᎯᎠ ᎦᏚᎢ. ᎾᏍᎩ ᎯᎠ ᎤᏓᏅᏖᏗ ᎾᏍᎩ ᎾᏍᏇ ᎤᎭ ᎤᎾᏤᎵ c-ᎨᏛᏍᏛᎢ ᎠᎷᏚᎧᏘ. ᎯᎠ dendritic ᏗᏂᏃᎨᏂ ᎠᎴ ᎤᏙᎯᏳ ᎤᏓᏂᎳᎯᎨ, ᎠᎴ ᏄᎵᏍᏛ ᎠᏍᏆᎵᏍᏗ ᎤᏣᏘᎾ, ᎠᏓᏅᏍᎦ ᏧᏠᎯᏍᏗ ᏙᏯᏗᏢ ᎠᎴ ᎧᏃᎨᏂ ᎠᏍᏓᏩᏛᏍᏗ. ᎬᏙᏗ ᏂᎦᎵᏍᏗᏍᎬᎫ ᎤᏓᏅᏗ ᎠᎾᎵᏖᎸᎲᏍᎬ ᎦᏁᏰᎩ ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᎹ, ᎾᏍᎩ ᎯᎠ ᎠᏍᏓᏩᏛᏍᏗ ᎠᏍᏆᎵᏍᏗ ᎦᎸᎳᏗᏢ ᎤᏗᏗᏢ ᎾᎾᎯ ᎤᏍᏆᏂᎪᏗ-ᏓᏍᏓᏅᏅ ᏚᎷᏨ ᎤᏍᏗ ᎤᏓᏅᏖᏗ ᎦᏙ ᎤᏍᏗ ᎤᏙᏢᏒ ᎠᎴᏫᏍᏙᏗ kanquotsegi ᎠᏫᏒᏗ ᎭᏫᎾᏗᏢ ᎯᎠ ᎦᏚᎢ ᎠᎹ, ᎤᏁᏍᏓᎳ ᏗᎦᎪᏗ ᎤᏯᏅᎲ '''[[frazil ice|frazil ᎠᎴ ᎪᎢ ᎤᏁᏍᏓᎳ]]'''. ᎭᏫᎾᏗᏢ ᎡᎷᏪᎢ ᏄᏍᏗᏓᏅ ᎯᎠ frazil ᎤᏓᏅᏖᏗ ᏄᎵᏍᏛ ᎤᏁᏍᏓᎳᏛᎯ ᎢᏧᎳ ᎤᏙᏢᏒ ᏫᎬᎵᏱᎵᏒ ᏌᎨᎢ ᏗᎬᎯᏓ ᎠᏲᎵ ᎤᏁᏍᏓᎳ; ᎭᏫᎾᏗᏢ Ꮝ ᎢᎬᏱ ᎠᏓᏅᏍᏗ, ᎯᎳᎪ ᎢᏳ ᎾᏍᎩ ᎨᏒᎢ ᏙᎢ ᎤᎸᏑᏘ, ᎾᏍᎩ ᎨᏒᎢ ᎤᏯᏅᎲ '''[[nilas]]'''. ᎯᎳᎪ ᎢᏳ ᎾᏍᎩ ᎤᏩᏒ ᎦᏲᎵ centimetres ᎤᎭᎨᏛ ᎪᎯ ᎨᏒᎢ ᎤᎸᏑᏘ ('''ᎤᎳᏏᎩ nilas''') ᎠᎴ ᏥᏄᏍᏗ ᎯᎠ ᎤᏁᏍᏓᎳ ᎠᏛᏍᎦ thicker ᎯᎠ nilas ᎠᎩᏍᎪᎢ ᎾᎿ ᎤᏍᎪᎸ ᏌᎪᏂᎨ ᎠᎴ ᏭᎵᏍᏆᏛ ᎤᏁᎬ ᎦᎾᏄᎪᏨᎢ. ᏌᏊ ᎢᏳᏩᎫᏗ nilas ᎤᎭ ᎪᏢᎯ Ꭲgotlvhi ignelvhi, ᎾᎥᏂᎨᏍᏙᏗ ᏄᏓᎴᎿᎥ ᎤᏛᏏᏗᏒ ᏧᎵᎬᏩᎳᏅᎯ ᏄᎵᏍᏔᏅ, ᎭᏫᎾᏗᏢ ᎦᏙ ᎤᏍᏗ ᎠᎹ ᎠᏍᏓᏩᏛᏍᏗ ᎤᏁᏍᏓᎳᏛᎯ ᎾᎿ ᎯᎠ ᎭᏫᏂ ᎯᎠ ᎬᏂᎨᏒ ᏄᏍᏛ ᎤᏁᏍᏓᎳ ᏗᎬᎯᏓ, ᏧᎵᎬᏩᎳᏅᎯ ᎤᏯᏅᎲ '''ᏄᏁᏌᏴᏢ ᎤᏛᏏᏗᏒ'''. ᎪᎯ ᎤᏛᏏᏗᏒ ᏧᎵᎬᏩᎳᏅᎯ ᏚᏓᏲᏒᎩ ᎢᎬᏱ-ᏑᏕᏘᏴᏓ ᎤᏁᏍᏓᎳ, ᎦᏙ ᎤᏍᏗ ᎭᏫᎾᏗᏢ ᏏᏴᏫ ᎢᏳ ᎤᏕᏘᏴᏌᏗᏒ ᎠᏙᏯᏅᎯᏗᎠ ᎾᏯᏛᎲᎢ 1.5&ndash;2&nbsp;m.
+* ᎭᏫᎾᏗᏢ ᏙᎯᏄᏍᏛ ᎠᎹ, ᎯᎠ ᎢᎬᏱ ᎠᎺᏉᎯ ᎤᏁᏍᏓᎳ ᎤᏙᏢᏒ ᎾᎿ ᎯᎠ ᎦᏚᎢ ᎨᏒᎢ ᎥᎢᏒᎢ ᏧᏓᎴᎿᎢ ᎤᏓᏅᏖᏗ ᎦᏙ ᎤᏍᏗ ᎠᎴᏅᏘᏍᎬ ᎠᎴ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᏙᏢᏒ ᎤᏍᏗ ᏙᏯᏗᏢ, ᎤᎩᏓᎵ ᎤᏩᎾᏕᏍᎩ ᎾᎿ ᎯᎠ ᎦᏚᎢ ᎠᎴ ᎠᏰᎵ ᎠᏍᏓᏅᏅ ᎦᏲᎵᎨ ᎬᎾᏬᏍᎬ 2-3&nbsp;mm. ᎠᏂᏏᏴᏫᎭ ᏙᏯᏗᏢ ᎤᎭ Ꮝ [[c-axis|c-ᎨᏛᏍᏛᎢ]] ᎠᎷᏚᎧᏘ ᎠᎴ ᎠᏛᏍᎦ ᏙᏯᏗᏢ ᏚᏦᏔᏩᏘ. ᎾᎾᎢ ᎤᏙᎯᏳ ᎪᏍᏓᏱ ᏯᏛᎿ ᏙᏯᏗᏢ ᎤᏙᏢᏒᎢ ᏗᏙᎳᎩ ᎠᏓᏁᎳᏅᎯ, ᎠᎴ ᎯᎠ ᎠᏛᏏᏒ ᎬᏙᏗ ᎤᏓᏅᏖᏗ ᎠᎩᏍᏗ ᎾᎿ hexagonal, ᎡᎶᎯ ᎤᏙᏢᏒ, ᎬᏙᏗ ᎦᏅᎯᏓ ᎤᏓᏂᎳᎯᎨ ᏗᏂᏃᎨᏂ ᏗᏓᏁᏍᏙᏗ atsinuqowisgv ᎦᏬᎯᎸᏙᏗ ᎯᎠ ᎦᏚᎢ. ᎾᏍᎩ ᎯᎠ ᎤᏓᏅᏖᏗ ᎾᏍᎩ ᎾᏍᏇ ᎤᎭ ᎤᎾᏤᎵ c-ᎨᏛᏍᏛᎢ ᎠᎷᏚᎧᏘ. ᎯᎠ dendritic ᏗᏂᏃᎨᏂ ᎠᎴ ᎤᏙᎯᏳ ᎤᏓᏂᎳᎯᎨ, ᎠᎴ ᏄᎵᏍᏛ ᎠᏍᏆᎵᏍᏗ ᎤᏣᏘᎾ, ᎠᏓᏅᏍᎦ ᏧᏠᎯᏍᏗ ᏙᏯᏗᏢ ᎠᎴ ᎧᏃᎨᏂ ᎠᏍᏓᏩᏛᏍᏗ. ᎬᏙᏗ ᏂᎦᎵᏍᏗᏍᎬᎫ ᎤᏓᏅᏗ ᎠᎾᎵᏖᎸᎲᏍᎬ ᎦᏁᏰᎩ ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᎹ, ᎾᏍᎩ ᎯᎠ ᎠᏍᏓᏩᏛᏍᏗ ᎠᏍᏆᎵᏍᏗ ᎦᎸᎳᏗᏢ ᎤᏗᏗᏢ ᎾᎾᎯ ᎤᏍᏆᏂᎪᏗ-ᏓᏍᏓᏅᏅ ᏚᎷᏨ ᎤᏍᏗ ᎤᏓᏅᏖᏗ ᎦᏙ ᎤᏍᏗ ᎤᏙᏢᏒ ᎠᎴᏫᏍᏙᏗ kanquotsegi ᎠᏫᏒᏗ ᎭᏫᎾᏗᏢ ᎯᎠ ᎦᏚᎢ ᎠᎹ, ᎤᏁᏍᏓᎳ ᏗᎦᎪᏗ ᎤᏯᏅᎲ '''[[frazil ice|frazil ᎠᎴ ᎪᎢ ᎤᏁᏍᏓᎳ]]'''. ᎭᏫᎾᏗᏢ ᎡᎷᏪᎢ ᏄᏍᏗᏓᏅ ᎯᎠ frazil ᎤᏓᏅᏖᏗ ᏄᎵᏍᏛ ᎤᏁᏍᏓᎳᏛᎯ ᎢᏧᎳ ᎤᏙᏢᏒ ᏫᎬᎵᏱᎵᏒ ᏌᎨᎢ ᏗᎬᎯᏓ ᎠᏲᎵ ᎤᏁᏍᏓᎳ; ᎭᏫᎾᏗᏢ Ꮝ ᎢᎬᏱ ᎠᏓᏅᏍᏗ, ᎯᎳᎪ ᎢᏳ ᎾᏍᎩ ᎨᏒᎢ ᏙᎢ ᎤᎸᏑᏘ, ᎾᏍᎩ ᎨᏒᎢ ᎤᏯᏅᎲ '''[[nilas]]'''. ᎯᎳᎪ ᎢᏳ ᎾᏍᎩ ᎤᏩᏒ ᎦᏲᎵ centimetres ᎤᎭᎨᏛ ᎪᎯ ᎨᏒᎢ ᎤᎸᏑᏘ ('''ᎤᎳᏏᎩ nilas''') ᎠᎴ ᏥᏄᏍᏗ ᎯᎠ ᎤᏁᏍᏓᎳ ᎠᏛᏍᎦ thicker ᎯᎠ nilas ᎠᎩᏍᎪᎢ ᎾᎿ ᎤᏍᎪᎸ ᏌᎪᏂᎨ ᎠᎴ ᏭᎵᏍᏆᏛ ᎤᏁᎬ ᎦᎾᏄᎪᏨᎢ. ᏌᏊ ᎢᏳᏩᎫᏗ nilas ᎤᎭ ᎪᏢᎯ ᎢᎪᏢᎯ ignelvhi, ᎾᎥᏂᎨᏍᏙᏗ ᏄᏓᎴᎿᎥ ᎤᏛᏏᏗᏒ ᏧᎵᎬᏩᎳᏅᎯ ᏄᎵᏍᏔᏅ, ᎭᏫᎾᏗᏢ ᎦᏙ ᎤᏍᏗ ᎠᎹ ᎠᏍᏓᏩᏛᏍᏗ ᎤᏁᏍᏓᎳᏛᎯ ᎾᎿ ᎯᎠ ᎭᏫᏂ ᎯᎠ ᎬᏂᎨᏒ ᏄᏍᏛ ᎤᏁᏍᏓᎳ ᏗᎬᎯᏓ, ᏧᎵᎬᏩᎳᏅᎯ ᎤᏯᏅᎲ '''ᏄᏁᏌᏴᏢ ᎤᏛᏏᏗᏒ'''. ᎪᎯ ᎤᏛᏏᏗᏒ ᏧᎵᎬᏩᎳᏅᎯ ᏚᏓᏲᏒᎩ ᎢᎬᏱ-ᏑᏕᏘᏴᏓ ᎤᏁᏍᏓᎳ, ᎦᏙ ᎤᏍᏗ ᎭᏫᎾᏗᏢ ᏏᏴᏫ ᎢᏳ ᎤᏕᏘᏴᏌᏗᏒ ᎠᏙᏯᏅᎯᏗᎠ ᎾᏯᏛᎲᎢ 1.5&ndash;2&nbsp;m.
 
-* ᎭᏫᎾᏗᏢ ᎤᏐᏅ ᎠᎹ, ᎢᏤᎢ ᎠᎺᏉᎯ ᎤᏁᏍᏓᎳ ᎨᏒᎢ ᎪᏢᎯ Ꭲgotlvhi ignelvhi ᎾᎥᎢ ᎯᎠ ᏄᏁᏌᏴᏢ ᎯᎠ ᎠᎺᏉᎯ ᏥᏄᏍᏗ ᎤᎦᎾᏭ ᎨᏒᎢ ᎤᎴᎾᎯᏛ ᎾᎾᎯ ᎯᎠ ᎦᏃᎴᏍᎬ. ᎯᎠ uppermost ᏫᏚᏳᎪᏛ ᎯᎠ ᎠᎺᏉᎯ ᎨᏒᎢ [[supercooling|supercooled]] ᎠᏍᏓᏩᏛᏍᏗ ᎡᎳᏗᏢ ᎯᎠ ᎤᏴᏢ ᎪᏍᏓᏱ, ᎾᎾᎢ ᎦᏙ ᎤᏍᏗ iyuwakodi ᎤᏍᏗ ᎤᏁᏍᏓᎳ platelets, ᎤᎾᏅᏛ ᏥᏄᏍᏗ frazil ᎤᏁᏍᏓᎳ, ᎤᏙᏢᏒ. ᏥᏄᏍᏗ ᎤᏟ ᎢᎦᎢ frazil ᎤᏁᏍᏓᎳ ᏚᏙᏢᏒ, ᎯᎠ ᎤᏁᏍᏓᎳ ᏚᏙᏢᏒ mushy ᎦᏚᎢ ᏫᏚᏳᎪᏛ, ᎤᎾᏅᏛ ᏥᏄᏍᏗ ᎪᎢ ᎤᏁᏍᏓᎳ. Frazil ᎤᏁᏍᏓᎳ ᎪᏪᎳᏅ ᎠᎪᎵᏰᏗ ᎠᎾᏍᎬᏘ ᎾᏍᎩ ᎾᏍᏇ ᎾᏍᏋ ᎤᏂᎩᏍᏔᏅ ᎾᎥᎢ [[snow|ᎤᎾᏥ]]ᎤᎶᏒᎩ, ᎤᏟ ᎬᏰᎸᏗ ᎬᎾᏬᏍᎬ supercooling.
+* ᎭᏫᎾᏗᏢ ᎤᏐᏅ ᎠᎹ, ᎢᏤᎢ ᎠᎺᏉᎯ ᎤᏁᏍᏓᎳ ᎨᏒᎢ ᎪᏢᎯ ᎢᎪᏢᎯ ignelvhi ᎾᎥᎢ ᎯᎠ ᏄᏁᏌᏴᏢ ᎯᎠ ᎠᎺᏉᎯ ᏥᏄᏍᏗ ᎤᎦᎾᏭ ᎨᏒᎢ ᎤᎴᎾᎯᏛ ᎾᎾᎯ ᎯᎠ ᎦᏃᎴᏍᎬ. ᎯᎠ uppermost ᏫᏚᏳᎪᏛ ᎯᎠ ᎠᎺᏉᎯ ᎨᏒᎢ [[supercooling|supercooled]] ᎠᏍᏓᏩᏛᏍᏗ ᎡᎳᏗᏢ ᎯᎠ ᎤᏴᏢ ᎪᏍᏓᏱ, ᎾᎾᎢ ᎦᏙ ᎤᏍᏗ ᎢᏳᏩᎪᏗ ᎤᏍᏗ ᎤᏁᏍᏓᎳ platelets, ᎤᎾᏅᏛ ᏥᏄᏍᏗ frazil ᎤᏁᏍᏓᎳ, ᎤᏙᏢᏒ. ᏥᏄᏍᏗ ᎤᏟ ᎢᎦᎢ frazil ᎤᏁᏍᏓᎳ ᏚᏙᏢᏒ, ᎯᎠ ᎤᏁᏍᏓᎳ ᏚᏙᏢᏒ mushy ᎦᏚᎢ ᏫᏚᏳᎪᏛ, ᎤᎾᏅᏛ ᏥᏄᏍᏗ ᎪᎢ ᎤᏁᏍᏓᎳ. Frazil ᎤᏁᏍᏓᎳ ᎪᏪᎳᏅ ᎠᎪᎵᏰᏗ ᎠᎾᏍᎬᏘ ᎾᏍᎩ ᎾᏍᏇ ᎾᏍᏋ ᎤᏂᎩᏍᏔᏅ ᎾᎥᎢ [[snow|ᎤᎾᏥ]]ᎤᎶᏒᎩ, ᎤᏟ ᎬᏰᎸᏗ ᎬᎾᏬᏍᎬ supercooling.
 
-ᎠᎺᏉᎯ ᎠᎴ ᎦᏃᎸᎥᏍᎬ ᎾᎯᏳᎢ ᎢᏯᏛᏁᎯ ᎠᎦᏲᎳᏗᏍᏗ ᎾᏍᎩ ᎯᎠ ᎤᏁᏍᏓᎳ ᎠᏍᏓᏩᏛᏍᏗ ᎾᎾᎯ ᎡᏆᎯᎨᏍᏙᏗ ᏗᏖᎵᏙ, ᎯᎸᏍᎩ metres ᎭᏫᎾᏗᏢ ᎠᏰᎵ ᎠᏍᏓᏅᏅ, ᎤᏯᏅᎲ '''[[pancake ice|ᎠᎵᏍᏓᏴᏗ ᎤᏁᏍᏓᎳ]]'''. ᎾᏍᎩ ᎯᎠ ᎦᏄᎯᏒ ᎾᎿ ᎯᎠ ᎠᎺᏉᎯ ᎦᏚᎢ, ᎠᎴ ᎤᎵᏍᏓ ᏗᎫᎪᏙᏗ ᎬᏙᏗ ᏌᏊ ᏄᏓᎴ, ᏑᏓᎴᎩ upturned ᎠᏍᏛᎢ. ᎭᏫᎾᏗᏢ iyuwakodi, ᎯᎠ ᎠᎵᏍᏓᏴᏗ ᎤᏁᏍᏓᎳ ᏗᏖᎵᏙ ᎠᎾᏍᎬᏘ ᎤᏅᏌ ᎾᏍᏋ rafted ᎦᏬᎯᎸᏙᏗ ᏌᏊ ᏄᏓᎴ ᎠᎴ ᎤᏁᏍᏓᎳ ᎢᏧᎳ ᎾᎾᎯ ᎤᏟ ᎢᎦᎢ ᎠᎧᎵᏬᎯ ᎤᏁᏍᏓᎳ ᎫᏢᏗ, ᎤᎾᏅᏛ ᏥᏄᏍᏗ '''ᏌᏊ ᎢᎬᏁᎸᎯ ᎤᏁᏍᏓᎳ ᎠᎵᏍᏓᏴᏗ ᎤᏁᏍᏓᎳ'''.  ᏯᏛᎿ ᎤᏁᏍᏓᎳ ᎤᎭ ᎤᏙᎯᏳ ᎤᏐᏅ ᎦᎾᏄᎪᏨᎢ ᎾᎿ ᎦᏚᎢ ᎠᎴ ᎭᏫᏂ.
+ᎠᎺᏉᎯ ᎠᎴ ᎦᏃᎸᎥᏍᎬ ᎾᎯᏳᎢ ᎢᏯᏛᏁᎯ ᎠᎦᏲᎳᏗᏍᏗ ᎾᏍᎩ ᎯᎠ ᎤᏁᏍᏓᎳ ᎠᏍᏓᏩᏛᏍᏗ ᎾᎾᎯ ᎡᏆᎯᎨᏍᏙᏗ ᏗᏖᎵᏙ, ᎯᎸᏍᎩ metres ᎭᏫᎾᏗᏢ ᎠᏰᎵ ᎠᏍᏓᏅᏅ, ᎤᏯᏅᎲ '''[[pancake ice|ᎠᎵᏍᏓᏴᏗ ᎤᏁᏍᏓᎳ]]'''. ᎾᏍᎩ ᎯᎠ ᎦᏄᎯᏒ ᎾᎿ ᎯᎠ ᎠᎺᏉᎯ ᎦᏚᎢ, ᎠᎴ ᎤᎵᏍᏓ ᏗᎫᎪᏙᏗ ᎬᏙᏗ ᏌᏊ ᏄᏓᎴ, ᏑᏓᎴᎩ upturned ᎠᏍᏛᎢ. ᎭᏫᎾᏗᏢ ᎢᏳᏩᎪᏗ, ᎯᎠ ᎠᎵᏍᏓᏴᏗ ᎤᏁᏍᏓᎳ ᏗᏖᎵᏙ ᎠᎾᏍᎬᏘ ᎤᏅᏌ ᎾᏍᏋ rafted ᎦᏬᎯᎸᏙᏗ ᏌᏊ ᏄᏓᎴ ᎠᎴ ᎤᏁᏍᏓᎳ ᎢᏧᎳ ᎾᎾᎯ ᎤᏟ ᎢᎦᎢ ᎠᎧᎵᏬᎯ ᎤᏁᏍᏓᎳ ᎫᏢᏗ, ᎤᎾᏅᏛ ᏥᏄᏍᏗ '''ᏌᏊ ᎢᎬᏁᎸᎯ ᎤᏁᏍᏓᎳ ᎠᎵᏍᏓᏴᏗ ᎤᏁᏍᏓᎳ'''.  ᏯᏛᎿ ᎤᏁᏍᏓᎳ ᎤᎭ ᎤᏙᎯᏳ ᎤᏐᏅ ᎦᎾᏄᎪᏨᎢ ᎾᎿ ᎦᏚᎢ ᎠᎴ ᎭᏫᏂ.
 
 ᎯᎠ ᎠᎺᏉᎯ ᎤᏁᏍᏓᎳ ᎤᏩᏌᏊ ᎨᏒᎢ ᎡᏆᏯ ᎢᏤᎢ, ᎣᏂ ᏧᏩᎫᏛ ᎯᎠ ᎠᎺᏉᎯ ᎠᎹ, ᎾᎥᎢ ᏧᎵᎬᏩᎳᏅᎯ ᎤᏯᏅᎲ ''ᎠᎹᎭ ᎧᏃᎯᏯᏍᏗ'', ᎨᏒᎢ expelled ᏂᏛᎴᏅᏓ ᎯᎠ ᏑᏓᎴᎩ ᎠᎴ consolidating ᎤᏁᏍᏓᎳ. ᎯᎠ ᏄᎵᏍᏔᏅ ᎦᎸᎳᏗᎨᏍᏗ ᏄᏍᏛ ᎠᎩᏍᏗ (ᎠᎴ ᏯᏛᎾ ᎠᏫᏒᏗ) ᎠᎹ ᎨᏒᎢ ᎤᎵᏍᎨᏛ ᎾᏓᏛᏂᏌᏁᎲ ᎾᎿ ᎯᎠ ᎠᎺᏉᎯ ᎤᏲᏨᎯ ᏓᎾᏗᎦᎴᏴᏍᎬ.
 
 ==ᎦᏇᏅᏗ ᎤᏁᏍᏓᎳ==
-''ᎦᏇᏅᏗ ᎤᏁᏍᏓᎳ'' ᎨᏒᎢ  ᎪᏢᎯ Ꭲgotlvhi ignelvhi ᏂᏛᎴᏅᏓ seawater ᎭᏫᎾᏗᏢ ᎯᎠ ᎡᎶᎯ ᎤᏤᎵ [[polar region|ᎦᏚᎢ ᎤᏔᏂᏗ ᎦᏙᎯ]], ᎠᎴ coverage ᎧᏁᏉᎠ ᎾᎯᏳᎨᏒ ᎪᎳ. ᎭᏫᎾᏗᏢ ᎠᎹ ᎦᏄᎪᎬ ᎠᎴ ᎪᎨᏱ, ᎯᎳᎪ ᎢᏳ ᎤᎦᎾᏭ ᏄᎵᏍᏔᏅ, ᎯᎠ ᏧᎬᏩᎶᏗᎢ ᎯᎠ ''ᎠᎺᏉᎯ ᎤᏁᏍᏓᎳ'' ᎠᏏᏅᏍᏗ. ᎯᎠ ᎤᎪᏗᏗ ᎤᎪᏗᏗ ᎯᎠ ᎡᎶᎯ ᎤᏤᎵ ᎠᎺᏉᎯ ᎤᏁᏍᏓᎳ ᏚᏙᏢᏒ ᎭᏫᎾᏗᏢ ᎯᎠ [[Arctic ocean|ᏗᎦᏘᎸᏍᏗ ᎠᎺᏉᎯ]] ᎠᎴ ᎯᎠ ᎠᎺᏉᎯ yvwatuwidv [[Antarctica]]. ᎯᎠ ᏗᎦᏘᎸᏍᏗ ᎤᏁᏍᏓᎳ ᎫᏢᏗ ᎨᏒᎢ ᎦᎸᎳᏗᎨᏍᏗ seasonal, ᎬᏙᏗ ᎤᏙᎯᏳ ᎤᏍᏗ ᎤᏁᏍᏓᎳ ᎭᏫᎾᏗᏢ ᎯᎠ ᏗᎦᏘᎸᏍᏗ ᎪᎨᏱ, ᎠᏒᎾᏍᏗᏱ ᎡᏍᎦᏂ ᎾᎥᏂᎨᏍᏙᏗ ᎢᏗᎦᏗ Ꮎ Antarctica ᎭᏫᎾᏗᏢ ᎪᎳ. ᏫᏄᎳᏍᏙᏗ, ᎤᎪᏗᏗ ᏗᎦᏘᎸᏍᏗ ᎠᎺᏉᎯ ᎤᏁᏍᏓᎳ ᎨᏒᎢ ''ᎢᎬᏱ ᏑᏕᏘᏴᏓ'' ᎤᏁᏍᏓᎳ, ᎦᎸᎳᏗᏢ 1 ᎠᏎᎯᎯ ᎤᎭᎨᏛ. ᎯᎠ ᏄᏍᏗᏓᏅ ᎭᏫᎾᏗᏢ ᎯᎠ ᏗᎦᏘᎸᏍᏗ ᎨᏒᎢ ᎤᏙᎯᏳ ᏄᏓᎴᎿᎥ (ᎦᏚᎢ ᎠᎺᏉᎯ dagatuwistanv ᎾᎥᎢ ᎦᏙᎯ, ᏥᏄᏍᏗ ᏚᎦᏘᎸᏒ ᎦᏚᎢ ᎡᏆ ᎦᏙᎯ dagatuwistanv ᎾᎥᎢ ᎠᎺᏉᎯ) ᎠᎴ ᎯᎠ seasonal ᏧᏓᎴᎿᎢ ᎤᏣᏘ ᎦᏲᎵᎨ, ᏫᏄᎳᏍᏙᏗ ᎤᏣᏘ ᏗᎦᏘᎸᏍᏗ ᎠᎺᏉᎯ ᎤᏁᏍᏓᎳ ᎨᏒᎢ ''multi-ᏑᏕᏘᏴᏓ'' ᎤᏁᏍᏓᎳ, ᎠᎴ thicker: ᎦᎸᎳᏗᏢ 3&ndash;4 ᎠᏎᎯᎯ ᎤᎭᎨᏛ ᎦᏬᎯᎸᏙᏗ ᎡᏆ ᎡᏍᎦᏂ, ᎬᏙᏗ ᏣᎴᎩ ᎦᎸᎳᏗᏢ 20 ᎠᏎᎯᎯ ᎤᎭᎨᏛ.
+''ᎦᏇᏅᏗ ᎤᏁᏍᏓᎳ'' ᎨᏒᎢ  ᎪᏢᎯ ᎢᎪᏢᎯ ignelvhi ᏂᏛᎴᏅᏓ seawater ᎭᏫᎾᏗᏢ ᎯᎠ ᎡᎶᎯ ᎤᏤᎵ [[polar region|ᎦᏚᎢ ᎤᏔᏂᏗ ᎦᏙᎯ]], ᎠᎴ coverage ᎧᏁᏉᎠ ᎾᎯᏳᎨᏒ ᎪᎳ. ᎭᏫᎾᏗᏢ ᎠᎹ ᎦᏄᎪᎬ ᎠᎴ ᎪᎨᏱ, ᎯᎳᎪ ᎢᏳ ᎤᎦᎾᏭ ᏄᎵᏍᏔᏅ, ᎯᎠ ᏧᎬᏩᎶᏗᎢ ᎯᎠ ''ᎠᎺᏉᎯ ᎤᏁᏍᏓᎳ'' ᎠᏏᏅᏍᏗ. ᎯᎠ ᎤᎪᏗᏗ ᎤᎪᏗᏗ ᎯᎠ ᎡᎶᎯ ᎤᏤᎵ ᎠᎺᏉᎯ ᎤᏁᏍᏓᎳ ᏚᏙᏢᏒ ᎭᏫᎾᏗᏢ ᎯᎠ [[Arctic ocean|ᏗᎦᏘᎸᏍᏗ ᎠᎺᏉᎯ]] ᎠᎴ ᎯᎠ ᎠᎺᏉᎯ ᏴᏩᏚᏫᏛ [[Antarctica]]. ᎯᎠ ᏗᎦᏘᎸᏍᏗ ᎤᏁᏍᏓᎳ ᎫᏢᏗ ᎨᏒᎢ ᎦᎸᎳᏗᎨᏍᏗ seasonal, ᎬᏙᏗ ᎤᏙᎯᏳ ᎤᏍᏗ ᎤᏁᏍᏓᎳ ᎭᏫᎾᏗᏢ ᎯᎠ ᏗᎦᏘᎸᏍᏗ ᎪᎨᏱ, ᎠᏒᎾᏍᏗᏱ ᎡᏍᎦᏂ ᎾᎥᏂᎨᏍᏙᏗ ᎢᏗᎦᏗ Ꮎ Antarctica ᎭᏫᎾᏗᏢ ᎪᎳ. ᏫᏄᎳᏍᏙᏗ, ᎤᎪᏗᏗ ᏗᎦᏘᎸᏍᏗ ᎠᎺᏉᎯ ᎤᏁᏍᏓᎳ ᎨᏒᎢ ''ᎢᎬᏱ ᏑᏕᏘᏴᏓ'' ᎤᏁᏍᏓᎳ, ᎦᎸᎳᏗᏢ 1 ᎠᏎᎯᎯ ᎤᎭᎨᏛ. ᎯᎠ ᏄᏍᏗᏓᏅ ᎭᏫᎾᏗᏢ ᎯᎠ ᏗᎦᏘᎸᏍᏗ ᎨᏒᎢ ᎤᏙᎯᏳ ᏄᏓᎴᎿᎥ (ᎦᏚᎢ ᎠᎺᏉᎯ ᏓᎦᏚᏫᏍᏔᏅ ᎾᎥᎢ ᎦᏙᎯ, ᏥᏄᏍᏗ ᏚᎦᏘᎸᏒ ᎦᏚᎢ ᎡᏆ ᎦᏙᎯ ᏓᎦtᎤᏫᏍᏔᏅ ᎾᎥᎢ ᎠᎺᏉᎯ) ᎠᎴ ᎯᎠ seasonal ᏧᏓᎴᎿᎢ ᎤᏣᏘ ᎦᏲᎵᎨ, ᏫᏄᎳᏍᏙᏗ ᎤᏣᏘ ᏗᎦᏘᎸᏍᏗ ᎠᎺᏉᎯ ᎤᏁᏍᏓᎳ ᎨᏒᎢ ''multi-ᏑᏕᏘᏴᏓ'' ᎤᏁᏍᏓᎳ, ᎠᎴ thicker: ᎦᎸᎳᏗᏢ 3&ndash;4 ᎠᏎᎯᎯ ᎤᎭᎨᏛ ᎦᏬᎯᎸᏙᏗ ᎡᏆ ᎡᏍᎦᏂ, ᎬᏙᏗ ᏣᎴᎩ ᎦᎸᎳᏗᏢ 20 ᎠᏎᎯᎯ ᎤᎭᎨᏛ.
 
 [[Image:Krillicekils.jpg|thumb|right|[[ROV]] ᎾᏍᎩᏯᎢ  [[krill]] grazing ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᏁᏍᏓᎳ.]]
 
-ᎯᎠ ᎢᎦᎢ ᎨᏒ ᎠᎺᏉᎯ ᎤᏁᏍᏓᎳ yvwatuwidv ᎢᏧᎳ ᎦᏅᎯᏓ ᎠᏓ ᎭᏫᎾᏗᏢ ᎪᎳ ᎨᏒᎢ ᎤᏠᏱ ᎭᏫᎾᏗᏢ ᏗᎦᏛᏗ.  ᎯᎠ ᎢᎦᎢ ᎨᏒ melted ᎠᏂᏏᏴᏫᎭ ᎪᎨᏱ ᎨᏒᎢ ᎦᎸᏉᏔᏅ ᎾᎥᎢ ᎯᎠ ᏄᏓᎴᎿᎥ ᏄᏍᏗᏓᏅ: ᎯᎠ ᎤᏴᏢ ᏗᎦᏘᎸᏍᏗ ᎦᏅᎯᏓ ᎠᏓ ᎨᏒᎢ ᎦᏬᎯᎸᏙᏗ ᎦᏙᎯ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎠᎺᏉᎯ ᎤᏁᏍᏓᎳ ᎨᏒᎢ yvwatuwidv ᎠᏍᏛᎢ, ᎠᎴ ᎯᎠ ᏗᎦᏘᎸᏍᏗ ᎠᎺᏉᎯ ᎤᏁᏍᏓᎳ ᎨᏒᎢ ᎭᏫᎾᏗᏢ ᎯᎠ ᏄᏚᏓᎸᎾ-circulating ᎤᎦᎾᏭ ᎢᏗᏢ ᎠᎺᏉᎯ.
+ᎯᎠ ᎢᎦᎢ ᎨᏒ ᎠᎺᏉᎯ ᎤᏁᏍᏓᎳ ᏴᏩᏚᏫᏛ ᎢᏧᎳ ᎦᏅᎯᏓ ᎠᏓ ᎭᏫᎾᏗᏢ ᎪᎳ ᎨᏒᎢ ᎤᏠᏱ ᎭᏫᎾᏗᏢ ᏗᎦᏛᏗ.  ᎯᎠ ᎢᎦᎢ ᎨᏒ melted ᎠᏂᏏᏴᏫᎭ ᎪᎨᏱ ᎨᏒᎢ ᎦᎸᏉᏔᏅ ᎾᎥᎢ ᎯᎠ ᏄᏓᎴᎿᎥ ᏄᏍᏗᏓᏅ: ᎯᎠ ᎤᏴᏢ ᏗᎦᏘᎸᏍᏗ ᎦᏅᎯᏓ ᎠᏓ ᎨᏒᎢ ᎦᏬᎯᎸᏙᏗ ᎦᏙᎯ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎠᎺᏉᎯ ᎤᏁᏍᏓᎳ ᎨᏒᎢ ᏴᏩᏚᏫᏛ ᎠᏍᏛᎢ, ᎠᎴ ᎯᎠ ᏗᎦᏘᎸᏍᏗ ᎠᎺᏉᎯ ᎤᏁᏍᏓᎳ ᎨᏒᎢ ᎭᏫᎾᏗᏢ ᎯᎠ ᏄᏚᏓᎸᎾ-circulating ᎤᎦᎾᏭ ᎢᏗᏢ ᎠᎺᏉᎯ.
 
 ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᎹ ᎦᏄᎪᎬ, [[krill]] ᏰᎵᏇ ᎠᏍᏛᎪᏍᏗ ᎤᏣᏘᎾ ᎯᎠ ᎢᏤ ᎢᏳᏍᏗ ᎣᏂ [[ice algae|ᎤᏁᏍᏓᎳ algae]] ᏂᏛᎴᏅᏓ ᎯᎠ underside ᎯᎠ ''ᎦᏇᏅᏗ ᎤᏁᏍᏓᎳ.'' ᎭᏫᎾᏗᏢ ᎪᎯ ᎾᏍᎩᏯᎢ ᎤᎪᏗᏗ krill ᎠᏓᏬᏍᏗ ᎭᏫᎾᏗᏢ upside ᎡᎳᏗ ᎾᎿ ᎦᏙᎬ ᎾᎿ ᎢᏴ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᏁᏍᏓᎳ. ᎾᏍᎩ ᎤᏩᏒ ᏌᏊ gantlai (ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᏰᎵ) ᎨᏒᎢ [[hover|ᏂᎦᏛᎢ]]ᎪᎯᏳᏙᏗ ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᏍᏚᎢᏛ ᎠᎹ.
 
@@ -54,7 +54,7 @@ __TOC__
 [[Image:NOAA arctic spring 1950 corp1104.jpg|thumb|left|ᎠᎹ ᎦᏄᎪᎬ ᎠᎦᏲᎳᏗᏍᏗ ᎤᏣᏘᎾ [[Alaska]] ᎤᏴᏢ ᎠᎹᏳᎳᏗ.]]
 [[Image:north pole september ice-pack 1978-2002.png|thumb|ᏫᎬᏍᏗ  ᎯᎠ ᏗᎦᏘᎸᏍᏗ ᎤᏁᏍᏓᎳ-ᎦᏇᏅᏗ ᎭᏫᎾᏗᏢ ᏚᎵᏍᏗ, 1978-2002]]
 [[Image:north pole february ice-pack 1978-2002.png|thumb|ᏫᎬᏍᏗ  ᎯᎠ ᏗᎦᏘᎸᏍᏗ ᎤᏁᏍᏓᎳ-ᎦᏇᏅᏗ ᎭᏫᎾᏗᏢ ᎧᎦᎵ, 1978-2002]]
-ᎭᏫᎾᏗᏢ ᎯᎠ ᏗᎦᏘᎸᏍᏗ, ᎯᎠ ᏂᎦᏛᎢ ᎤᎾᏥ ᏫᏚᏳᎪᏛ ᎢᏯᏛᏁᎵᏓᏍᏗ ᎠᎴᏂᏍᎬ ᎠᎦᏲᎳᏗᏍᏗ ᏂᏛᎴᏅᏓ ᎣᏂᏱᏳ ᎠᎾᏍᎬᏘ ᎢᎬᏱ ᏕᎭᎷᏱ. ᎤᎦᎾᏭ ᎯᎠ snowcover ᏫᏚᏳᎪᏛ ᎯᎠ ᏚᏙᎳᏩᏛᎲ [[melt ponds|ᎠᎦᏲᎳᏗᏍᏗ ᎥᏓᎵ]] (meltwater ᎦᏁᎲ)ᎾᎿ ᎯᎠ ᎦᏚᎢ ᎯᎠ ᎤᏁᏍᏓᎳ. ᎾᎿ ᎢᎬᏱ ᏑᏕᏘᏴᏓ ᎤᏁᏍᏓᎳ, ᎦᏙ ᎤᏍᏗ ᎤᎭ ᎤᏩᎾᏕᏍᎩ ᎦᎸᎳᏗᏢ ᎦᏚᎢ ᎾᎾᎢ ᎯᎠ ᎤᎵᏍᏛ ᎪᎳ (ᎾᏍᎩ ᎤᏩᏒ ᎭᏢᏃ ridged), ᎯᎠ ᎦᏁᎲ ᎠᎴ ᎠᎴᏅᏘᏍᎬ ᎤᏙᎯᏳ ᎤᏅᏬᏓ, ᏑᏓᎴᎩ ᎭᏫᎾᏗᏢ ᎠᏲᎵ ᎧᏂᎬᎾᎥ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᏁᏍᏓᎳ ᎦᏚᎢ, ᎠᎴ ᏄᏦᏍᏛᎾᏊ ᎠᎴᏂᏙᎲ ᏗᎦᏂᏴᎯ ᏂᎬᏁᎸ ᎭᏫᏂᏗᏢ ᏩᎵᏃᎯᏯᏍᎬ ᎤᎾᏥ ᎦᏇᏅᏗ ᏥᏄᏍᏗ ᏫᏚᏳᎪᏛ ᎠᎹᏳᎸᏗ ᏌᎷᏱ. ᏥᏄᏍᏗ ᎪᎨᏱ ᏗᏱᎸᏍᏔᏅ, ᏱᏂᎬᏛᎾ, ᎪᎯ ᎠᎴᏅᏘᏍᎬ ᎤᏍᏆᏂᎪᏗ ᎠᏛᎯᏍᏙᏗ ᏗᏙᎳᎩ ᎤᏟ ᎢᎦᎢ ᎣᏍᏛ ᏄᏩᏁᎸ ᏥᏄᏍᏗ ᎯᎠ ᎦᏁᎲ ᎠᎦᏲᎳᏗᏍᏗ ᎤᎾᏤᎵ ᎦᎶᎯᏍᏗ ᎡᎳᏗ ᎾᎾᎯ ᎯᎠ ᎤᏁᏍᏓᎳ ᏗᎬᏩᎶᏒ ᎠᏑᏰᏛ ᎤᎾᏓᏟᏌᏅ [[solar radiation|ᎡᎶᎯ ᎤᏣᏘᎾ]] ᎾᎥᎢ ᎯᎠ ᎠᎹ, ᎦᏙ ᎤᏍᏗ ᏄᏍᏛ ᏨᏓᏓnusdv tsvdadakenedi ᎾᏍᎩ ᎤᏩᏒ 15&ndash;40% ᎯᎠ ᎤᏣᏘᎾ ᎦᎶᏍᎬ ᎾᎿ ᎾᏍᎩ ᎤᏠᏱᎭᎢ 40&ndash;70% ᎾᏍᎩᎾᎢ ᎤᏰᎸᎭ ᎤᏁᏍᏓᎳ.
+ᎭᏫᎾᏗᏢ ᎯᎠ ᏗᎦᏘᎸᏍᏗ, ᎯᎠ ᏂᎦᏛᎢ ᎤᎾᏥ ᏫᏚᏳᎪᏛ ᎢᏯᏛᏁᎵᏓᏍᏗ ᎠᎴᏂᏍᎬ ᎠᎦᏲᎳᏗᏍᏗ ᏂᏛᎴᏅᏓ ᎣᏂᏱᏳ ᎠᎾᏍᎬᏘ ᎢᎬᏱ ᏕᎭᎷᏱ. ᎤᎦᎾᏭ ᎯᎠ snowcover ᏫᏚᏳᎪᏛ ᎯᎠ ᏚᏙᎳᏩᏛᎲ [[melt ponds|ᎠᎦᏲᎳᏗᏍᏗ ᎥᏓᎵ]] (meltwater ᎦᏁᎲ)ᎾᎿ ᎯᎠ ᎦᏚᎢ ᎯᎠ ᎤᏁᏍᏓᎳ. ᎾᎿ ᎢᎬᏱ ᏑᏕᏘᏴᏓ ᎤᏁᏍᏓᎳ, ᎦᏙ ᎤᏍᏗ ᎤᎭ ᎤᏩᎾᏕᏍᎩ ᎦᎸᎳᏗᏢ ᎦᏚᎢ ᎾᎾᎢ ᎯᎠ ᎤᎵᏍᏛ ᎪᎳ (ᎾᏍᎩ ᎤᏩᏒ ᎭᏢᏃ ridged), ᎯᎠ ᎦᏁᎲ ᎠᎴ ᎠᎴᏅᏘᏍᎬ ᎤᏙᎯᏳ ᎤᏅᏬᏓ, ᏑᏓᎴᎩ ᎭᏫᎾᏗᏢ ᎠᏲᎵ ᎧᏂᎬᎾᎥ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᏁᏍᏓᎳ ᎦᏚᎢ, ᎠᎴ ᏄᏦᏍᏛᎾᏊ ᎠᎴᏂᏙᎲ ᏗᎦᏂᏴᎯ ᏂᎬᏁᎸ ᎭᏫᏂᏗᏢ ᏩᎵᏃᎯᏯᏍᎬ ᎤᎾᏥ ᎦᏇᏅᏗ ᏥᏄᏍᏗ ᏫᏚᏳᎪᏛ ᎠᎹᏳᎸᏗ ᏌᎷᏱ. ᏥᏄᏍᏗ ᎪᎨᏱ ᏗᏱᎸᏍᏔᏅ, ᏱᏂᎬᏛᎾ, ᎪᎯ ᎠᎴᏅᏘᏍᎬ ᎤᏍᏆᏂᎪᏗ ᎠᏛᎯᏍᏙᏗ ᏗᏙᎳᎩ ᎤᏟ ᎢᎦᎢ ᎣᏍᏛ ᏄᏩᏁᎸ ᏥᏄᏍᏗ ᎯᎠ ᎦᏁᎲ ᎠᎦᏲᎳᏗᏍᏗ ᎤᎾᏤᎵ ᎦᎶᎯᏍᏗ ᎡᎳᏗ ᎾᎾᎯ ᎯᎠ ᎤᏁᏍᏓᎳ ᏗᎬᏩᎶᏒ ᎠᏑᏰᏛ ᎤᎾᏓᏟᏌᏅ [[solar radiation|ᎡᎶᎯ ᎤᏣᏘᎾ]] ᎾᎥᎢ ᎯᎠ ᎠᎹ, ᎦᏙ ᎤᏍᏗ ᏄᏍᏛ ᏨᏓᏓᏄᏍᏛ ᏨᏓᏓᎨᏁᏗ ᎾᏍᎩ ᎤᏩᏒ 15&ndash;40% ᎯᎠ ᎤᏣᏘᎾ ᎦᎶᏍᎬ ᎾᎿ ᎾᏍᎩ ᎤᏠᏱᎭᎢ 40&ndash;70% ᎾᏍᎩᎾᎢ ᎤᏰᎸᎭ ᎤᏁᏍᏓᎳ.
 
 ᏥᏄᏍᏗ ᎯᎠ ᎠᎦᏲᎳᏗᏍᏗ ᎦᏁᎲ ᎠᏛᏍᎬ deeper ᎠᎴ wider ᎤᏅᏌ ᎠᎾᏍᎬᏘ ᏭᎵᏱᎶᎸ ᎠᏟᏴᏍᏗ ᎤᏣᏘᎾ ᎾᎾᎯ ᎯᎠ ᎠᎺᏉᎯ, ᎦᏬᎯᎸᏙᏗ ᎯᎠ ᎠᏍᏆᎨᏂ floes, ᏗᎬᏩᎶᏒ ᎬᏂᎨᏒ ᏄᏍᏛ ᎤᏝᏅᏛ, ᎠᎴ ᎾᎥᎢ ᎤᎦᎾᏭ '''[[thaw hole|ᎬᎾᏬᏍᎬ ᎠᏔᎴᏒ]]''' ᏚᏳᎪᏛ ᏗᎬᏩᎶᏒ ᎯᎠ ᎤᏁᏍᏓᎳ ᎾᎾᎢ Ꮝ thinnest ᎪᏍᏓᏱ ᎠᎴ ᎾᎾᎢ ᎯᎠ ᎠᎦᏲᎳᏗᏍᏗ ᎦᏁᎲ ᎤᏤᎵ deepest ᎪᏍᏓᏱ. ᎯᎠ downrush ᎠᎹ ᎯᎳᎪ ᎢᏳ ᎬᎾᏬᏍᎬ ᎠᏔᎴᏒ ᎠᎵᏍᏚᎢᎠ ᎠᎾᏍᎬᏘ ᎾᏍᏋ ᎾᎥᏂᎨᏍᏙᏗ ᎬᏂᎦᎳᏍᏗ ᎦᎾᏰᎩ, ᎠᎴ ᎾᎿ ᎤᏙᎯᏳ ᎤᏩᎾᏕᏍᎩ ᎤᏁᏍᏓᎳ, ᏯᏛᎿ ᏥᏄᏍᏗ ᎦᏣᏄᎳ ᎤᏁᏍᏓᎳ, ᏏᏴᏫ ᎬᎾᏬᏍᎬ ᎠᏔᎴᏒ ᎠᎾᏍᎬᏘ ᎠᏟᏴᏍᏗ ᎡᏆ ᎡᏍᎦᏂ ᎤᏁᏍᏓᎳ ᎦᏚᎢ. ᏂᏛᎴᏅᏓ ᎯᎠ ᎤᏃᎴ ᏯᏛᎿ ᎬᎾᏬᏍᎬ ᏂᎦᎸᏉᏛᎾ ᎠᏓᏁᏗ ᎯᎠ ᎦᎾᏄᎪᏨᎢ "ᏂᎬᎢ ᎠᏂᎧᎾᏁᏍ", ᎬᏙᏗ ᎯᎠ "ᎠᏰᎸ" ᎠᎴᏂᏙᎲ ᎯᎠ ᎬᎾᏬᏍᎬ ᎠᏔᎴᏒ ᎠᎴ ᎯᎠ "ᏗᏂᏅᏍᎨᏂ" ᎤᎶᎯᏍᏗ ᎠᎦᏲᎳᏗᏍᏗ ᎠᎹ ᎠᏟᏴᏍᏗ ᏚᏦᏔᏩᏘ ᏫᏂᏚᏳᎪᏛ ᎯᎠ ᎠᏔᎴᏒ.
 
@@ -71,7 +71,7 @@ __TOC__
 |[[Image:Ice-seaice-extent-sep2004.gif|90px|right|ᏚᎵᏍᏗ 2004]]
 |}
 
-ᏭᎵᏍᏆᏙᏅ ᎠᎴ ᎤᎪᏗᏗ ᎤᎵᏍᎨᏛ ᎠᏛᏁᎵᏍᎩ ᎤᏍᏆᎸᎡᎲ ᎯᎠ ᎠᎦᏲᎳᏗᏍᏗ ᎠᎹ ᎨᏒᎢ Ꮎ ᎢᎦᏛ ᎾᏍᎩ ᏧᏂᎸᏫᏍᏓᏁᏗ Ꮝ ᎦᎶᎯᏍᏗ ᎡᎳᏗ ᏗᎬᏩᎶᏒ ᎯᎠ ᎤᏁᏍᏓᎳ ᎤᏔᏂᏗ ᎦᏙᎯ ᏗᎬᏩᎶᏒ ᎠᏲᎵ ᎠᏍᏚᎢᏍᎬ, ᎠᏓᎵᎦᎵᏍᏗᏍᎩ ᎠᎴ ᎤᎶᎯᏍᏗ, ᎠᎴ ᎭᏫᎾᏗᏢ ᎾᎾᏛᏁᎲ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎠᏱᎴᎦ atsinuqowisgv ᎤᏣᏘ ᎯᎠ ᏩᎵᏃᎯᏯᏍᎬ ᎠᎹᎭ. ᎪᎯ ᏧᎵᎬᏩᎳᏅᎯ, ᎤᏯᏅᎲ ᎧᎵᏬᎯ, ᎨᏒᎢ ᎯᎠ ᎤᎪᏗᏗ ᎠᏏᎾᏍᏛ ᎠᎴ ᎦᏣᏄᎳ ᎤᏙᏢᏒ ᎠᎹᎭ ᎢᏳᏍᏗ ᎧᏃᎮᏗ ᎪᎱᏍᏗ ᎬᏔᏂᏓᏍᏗ, ᎠᎴ ᎾᏍᎩ ᏗᏂᎪᏍᏙᏗ ᎠᎲᏍᏗ ᎾᎥᏂᎨᏍᏗ ᏂᎦᏛ ᎯᎠ ᏩᎵᏃᎯᏯᏍᎬ ᎠᎹᎭ ᏂᏛᎴᏅᏓ ᎯᎠ ᎢᎬᏱ-ᏑᏕᏘᏴᏓ ᎤᏁᏍᏓᎳ. ᎯᎠ hydrostatic ᎠᏍᎪᎵ ᎯᎠ ᎦᏚᎢ meltwater ᏓᏓᏁᎳᏁ ᎯᎠ ᎠᏱᎵᏒ ᎦᏌᏙᏯᏍᏗ, ᎠᎴ interconnecting ᏓᎧᏁᎲ ᎠᏍᏚᎢᏍᎬ ᎨᏒᎢ ᎾᏍᎩ ᎢᏳᎵᏍᏙᏗ ᎾᏍᎩᎾᎢ ᎯᎠ ᎧᎵᏬᎯ ᏧᎵᎬᏩᎳᏅᎯ ᎠᏂᎪᏍᏙᏗ. ᎠᏓᏁᎸ Ꮎ ᎯᎠ ᏄᎵᏂᎬᎬ properties ᎠᎺᏉᎯ ᎤᏁᏍᏓᎳ ᎠᎵᏍᎦᏍᏙᏗ ᎾᎿ ᎯᎠ ᎠᎹᎭ ᎦᏟᏌᏅ ᎪᏪᎵ, ᎪᎯ implies Ꮎ ᎯᎠ ᎧᎵᏬᎯ ᎪᎱᏍᏗ ᎬᏔᏂᏓᏍᏗ ᎪᏢᏗ ᏩᎵᏃᎯᏯᏍᎬ ᎤᏁᏍᏓᎳ ᏗᎬᎯᏓ ᎦᏙ ᎤᏍᏗ ᎾᎯᏳᎨᏒ Ꮝ ᏔᎵᏁ ᎪᎳ ᎬᏂᎨᏒ ᏄᏍᏛᎢ ᎤᎭ ᎤᏣᏘ ᎡᏆ ᎢᎨᏍᏙᏗ ᏄᎵᏂᎬᎬ ᎬᎾᏬᏍᎬ ᎭᏫᎾᏗᏢ Ꮝ ᎢᎬᏱ ᎪᎳ.
+ᏭᎵᏍᏆᏙᏅ ᎠᎴ ᎤᎪᏗᏗ ᎤᎵᏍᎨᏛ ᎠᏛᏁᎵᏍᎩ ᎤᏍᏆᎸᎡᎲ ᎯᎠ ᎠᎦᏲᎳᏗᏍᏗ ᎠᎹ ᎨᏒᎢ Ꮎ ᎢᎦᏛ ᎾᏍᎩ ᏧᏂᎸᏫᏍᏓᏁᏗ Ꮝ ᎦᎶᎯᏍᏗ ᎡᎳᏗ ᏗᎬᏩᎶᏒ ᎯᎠ ᎤᏁᏍᏓᎳ ᎤᏔᏂᏗ ᎦᏙᎯ ᏗᎬᏩᎶᏒ ᎠᏲᎵ ᎠᏍᏚᎢᏍᎬ, ᎠᏓᎵᎦᎵᏍᏗᏍᎩ ᎠᎴ ᎤᎶᎯᏍᏗ, ᎠᎴ ᎭᏫᎾᏗᏢ ᎾᎾᏛᏁᎲ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎠᏱᎴᎦ ᎠᏥᏄᏉᏫᏍᎬ ᎤᏣᏘ ᎯᎠ ᏩᎵᏃᎯᏯᏍᎬ ᎠᎹᎭ. ᎪᎯ ᏧᎵᎬᏩᎳᏅᎯ, ᎤᏯᏅᎲ ᎧᎵᏬᎯ, ᎨᏒᎢ ᎯᎠ ᎤᎪᏗᏗ ᎠᏏᎾᏍᏛ ᎠᎴ ᎦᏣᏄᎳ ᎤᏙᏢᏒ ᎠᎹᎭ ᎢᏳᏍᏗ ᎧᏃᎮᏗ ᎪᎱᏍᏗ ᎬᏔᏂᏓᏍᏗ, ᎠᎴ ᎾᏍᎩ ᏗᏂᎪᏍᏙᏗ ᎠᎲᏍᏗ ᎾᎥᏂᎨᏍᏗ ᏂᎦᏛ ᎯᎠ ᏩᎵᏃᎯᏯᏍᎬ ᎠᎹᎭ ᏂᏛᎴᏅᏓ ᎯᎠ ᎢᎬᏱ-ᏑᏕᏘᏴᏓ ᎤᏁᏍᏓᎳ. ᎯᎠ hydrostatic ᎠᏍᎪᎵ ᎯᎠ ᎦᏚᎢ meltwater ᏓᏓᏁᎳᏁ ᎯᎠ ᎠᏱᎵᏒ ᎦᏌᏙᏯᏍᏗ, ᎠᎴ interconnecting ᏓᎧᏁᎲ ᎠᏍᏚᎢᏍᎬ ᎨᏒᎢ ᎾᏍᎩ ᎢᏳᎵᏍᏙᏗ ᎾᏍᎩᎾᎢ ᎯᎠ ᎧᎵᏬᎯ ᏧᎵᎬᏩᎳᏅᎯ ᎠᏂᎪᏍᏙᏗ. ᎠᏓᏁᎸ Ꮎ ᎯᎠ ᏄᎵᏂᎬᎬ properties ᎠᎺᏉᎯ ᎤᏁᏍᏓᎳ ᎠᎵᏍᎦᏍᏙᏗ ᎾᎿ ᎯᎠ ᎠᎹᎭ ᎦᏟᏌᏅ ᎪᏪᎵ, ᎪᎯ implies Ꮎ ᎯᎠ ᎧᎵᏬᎯ ᎪᎱᏍᏗ ᎬᏔᏂᏓᏍᏗ ᎪᏢᏗ ᏩᎵᏃᎯᏯᏍᎬ ᎤᏁᏍᏓᎳ ᏗᎬᎯᏓ ᎦᏙ ᎤᏍᏗ ᎾᎯᏳᎨᏒ Ꮝ ᏔᎵᏁ ᎪᎳ ᎬᏂᎨᏒ ᏄᏍᏛᎢ ᎤᎭ ᎤᏣᏘ ᎡᏆ ᎢᎨᏍᏙᏗ ᏄᎵᏂᎬᎬ ᎬᎾᏬᏍᎬ ᎭᏫᎾᏗᏢ Ꮝ ᎢᎬᏱ ᎪᎳ.
 
 ==ᏫᏓᏎᎸᎢ==
 
