--- a/ᎪᏪᎵ.mw
+++ b/ᎪᏪᎵ.mw
@@ -14,7 +14,7 @@
 === ᏧqᎠᎫᏔᏅᏒ ===
 [[File:Pompeii-woman.jpg|thumb|right|ᎠᎨᏴ ᏚᏂᏴᏒ ᎪᏪᎵ (ᎠᎴ ᎠᏜ ᏗᎪᏪᎶᏗ ᎪᏪᎵ) ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᏙᏢᏒ ᎯᎠ [[codex|ᎪᏪᎵ]]. ᎠᏐᏴ ᎠᏂᎶᏁᏍᎬ ᏂᏛᎴᏅᏓ Pompeii, ᎤᏓᎷᎸ 79 ᏂᏓᏙᎳᎬᎾ.]]
 [[File:Old book bindings.jpg|thumb|right|ᎠᎦᏴᎵ ᏗᎪᏪᎵ ᎾᎾᎢ ᎯᎠ [[Merton College library|Merton ᎦᎸᎳᏗᏴ ᏧᎾᏕᎶᏆᏍᏗ ᎪᏪᎵ ᏕᎦᏅ ᏗᎪᎵᏰᏗ]] ᎾᎾᎢ [[University of Oxford|Oxford]].]]
-ᎯᎠ ᎧᏁᏨᎯ ᎬᏂᎨᏒ ᎢᎬᏁᏗ ([[word of mouth|ᎧᏁᏨ ᎠᎰᎵ]], [[tradition|ᎧᏃᎮᎸᎯ]], [[hearsay|ᎠᏛᎦᏅᎯ]]) ᎨᏒᎢ ᎯᎠ lyudetiyvda ᎠᏫᏗᏍᎩ ᎨᏥᏃᎯᏎᏗ ᎠᎴ ᎢᏗᎦᎸᎳᏗ. ᎯᎳᎪ ᎢᏳ [[writing system|ᎠᏃᏪᎵᏍᎬ iyahdvnelidasdi]]ᎨᏒᎩ ᎦᎾᎬᎢ ᎭᏫᎾᏗᏢ [[ancient civilization|ᎯᎸᎯᏳᎢ ᎠᏓᏅᏘᏐᏗ]], ᎾᎥᏂᎨᏍᏗ ᎢᎬᏩᏕᎴᎩ Ꮎ ᏰᎵᏇ ᎾᏍᏋ ᎪᏪᎳᏅᎯ ᎾᏍᎩ—ᏅᏯ, [[clay tablet|ᎦᏓᏆᎵ]], ᏡᎬ ᎤᏯᎸ, ᎠᎾᎦᎵᏍᎩ ᎦᏂᏱᏍᎩ ᏗᎬᎯᏓ—ᏥᏄᏍᏛᎩ ᎬᏔᏅᎯ ᎾᏍᎩᎾᎢ ᎠᏃᏪᎵᏍᎬ.
+ᎯᎠ ᎧᏁᏨᎯ ᎬᏂᎨᏒ ᎢᎬᏁᏗ ([[word of mouth|ᎧᏁᏨ ᎠᎰᎵ]], [[tradition|ᎧᏃᎮᎸᎯ]], [[hearsay|ᎠᏛᎦᏅᎯ]]) ᎨᏒᎢ ᎯᎠ ᎳᏳᏕᏘᏴᏓ ᎠᏫᏗᏍᎩ ᎨᏥᏃᎯᏎᏗ ᎠᎴ ᎢᏗᎦᎸᎳᏗ. ᎯᎳᎪ ᎢᏳ [[writing system|ᎠᏃᏪᎵᏍᎬ ᎢᏯᏛᏁᎵᏓᏍᏗ]]ᎨᏒᎩ ᎦᎾᎬᎢ ᎭᏫᎾᏗᏢ [[ancient civilization|ᎯᎸᎯᏳᎢ ᎠᏓᏅᏘᏐᏗ]], ᎾᎥᏂᎨᏍᏗ ᎢᎬᏩᏕᎴᎩ Ꮎ ᏰᎵᏇ ᎾᏍᏋ ᎪᏪᎳᏅᎯ ᎾᏍᎩ—ᏅᏯ, [[clay tablet|ᎦᏓᏆᎵ]], ᏡᎬ ᎤᏯᎸ, ᎠᎾᎦᎵᏍᎩ ᎦᏂᏱᏍᎩ ᏗᎬᎯᏓ—ᏥᏄᏍᏛᎩ ᎬᏔᏅᎯ ᎾᏍᎩᎾᎢ ᎠᏃᏪᎵᏍᎬ.
 
 ==== ᎪᏪᎸ ====
 ᎭᏫᎾᏗᏢ [[Ancient Egypt|ᎯᎸᎯᏳᎢ Egypt]], [[papyrus|ᎠᏃᏪᎵᏍᎬ]] (ᎤᏙᏢᏒ [[paper|Ꭺ]] ᎪᏢᏅᎯ ᏂᏛᎴᏅᏓ ᎯᎠ ᎤᏩᏂᎦᎸ ᎯᎠ ᎠᏃᏪᎵᏍᎬ ᎦᎪᏘ) ᏥᏄᏍᏛᎩ ᎦᏳᎳ ᎬᏔᏅᎯ ᎾᏍᎩᎾᎢ ᎠᏃᏪᎵᏍᎬ ᏥᏄᏍᏗ ᏂᏛᎴᏅᏓ 2400 BC. ᎠᏃᏪᎵᏍᎬ ᏗᎬᎯᏓ ᎨᏒᎩ glued ᎢᏧᎳ ᎤᏙᏢᏒ [[Scroll (parchment)|ᎪᏪᎸ]]. ᎪᎯ ᏄᏍᏛ ᎢᏯᏛᏁᏗ ᎤᏁᏉᏤᎸ ᏂᎬᎢ ᎤᎾᏤᎵᏛ ᎭᏫᎾᏗᏢ ᎯᎠ Hellenistic ᎠᎴ ᎶᎻ ᎡᎶᎯ, ᎾᏍᎩ ᎤᏁᎳᎩ ᎢᏧᎳ ᎤᎭ ᎪᎯᏳᏙ Ꮎ ᏡᎬ ᎤᏯᎸ (Latin ''liber'', ᏂᏛᎴᏅᏓ ᎾᎿᎢ ᎾᏍᎩ ᎾᏍᏇ [[library|ᎪᏪᎵ ᏕᎦᏅ ᏗᎪᎵᏰᏗ]]) ᏥᏄᏍᏛᎩ ᎬᏔᏅᎯ ᏂᏛᎴᏅᏓ ᎢᎬᏱᎨᏍᏙᏗ ᎢᏧᏩᎪᏗ ᎭᏫᎾᏗᏢ Italy. ᎠᎴ ᎾᎯᏳᎨᏒ ᎤᎪᏗᏗ ᎯᎠ [[Classical antiquity|ᎠᏓᏙᎵᏍᏗ ᎠᎴᏫᏍᏙᏗ]] ᎠᏃᏪᎵᏍᎬ ᏥᏄᏍᏛᎩ ᎾᎥᏂᎨᏍᏗ ᎢᏗᎦᏘᎭ ᎬᏙᏗ ᎠᏃᏪᎵᏍᎬ ᏭᏚᎸᏛ ᎬᏙᏗ ᎠᎴ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎯᎠ ᎤᏂᏁᏨ 'Ꭺ' ᎠᎴ 'ᏧᎭᎨᏓ ᎪᏪᎵ' ᎢᏧᎳ ᎦᎷᏨ ᏂᏛᎴᏅᏓ ᎠᎪᎢ ᎤᏂᏁᏨ ᎦᏛᎬᎢ ᎠᏃᏪᎵᏍᎬ.
@@ -22,7 +22,7 @@
 ᎭᏫᎾᏗᏢ ᏧᎾᏕᎶᏆᏍᏗ, ᎭᏫᎾᏗᏢ ᎢᎦ ᏄᎵᏍᏔᏅᏒ ᎠᎴ ᎾᏍᎩᎾᎢ ᎠᎩᏍᎬᎢ ᏓᏓᏚᎬ ᎪᏪᎵ [[wax tablet|ᎠᏜ ᏗᎪᏪᎶᏗ ᎪᏪᎵ]]ᎨᏒᎩ ᎯᎠ ᏄᎶᏒᏍᏛᎾ ᎠᏃᏪᎵᏍᎬ ᏭᏚᎸᏛ ᎬᏙᏗ. ᎠᏜ ᏗᎪᏪᎶᏗ ᎪᏪᎵ ᎠᏰᎲ ᎯᎠ ᎠᏜᏅᎠᏓᏗᏍᎬ ᎠᎴᏂᏙᎲ reusable: ᎯᎠ ᎠᏜ ᏰᎵᏇ ᎾᏍᏋ melted ᎠᎴ ᎢᏤ ᏓᎵᏍᏛ carved ᎾᎾᎯ ᎯᎠ ᎠᏜ. ᎯᎠ ᏄᏍᏛ ᎢᏯᏛᏁᏗ ᎢᏯᏛᏁᏗ ᎯᎸᏍᎩ ᎠᏜ ᏗᎪᏪᎶᏗ ᎪᏪᎵ ᎢᏧᎳ ᎨᏒᎢ ᏰᎵᏊ ᏭᎵᏍᎨᏗᏴ ᎾᏍᎩᎾᎢ ᎪᎯᏊ ᎢᏴ ᏥᎩ ᏗᎪᏪᎵ.
 
 ==== ᎪᏪᎵ ====
-ᎠᏃᏪᎵᏍᎬ ᎪᏪᎸ ᎨᏒᎩ ᏙᎢ ᎾᏓᏛᏂᏌᏁᎲ ᎯᎳᎪ ᎢᏳ [[codex|codices]] ᎤᎾᏄᎪᏨ ᎭᏫᎾᏗᏢ ᎯᎠ ᎢᎬᏱ ᏍqᎣᎯᏧᏈ ᏧᏕᏘᏴᏗ .D., ᏥᏄᏍᏗ witnessed ᎾᎥᎢ ᎯᎠ ᎥᏩᏘᏍᎬ ᎭᏫᎾᏗᏢ [[Pompeii]]. ᎦᏂᎸ ᎠᏱᎸᏓ ᎯᎠ ᎪᏪᎵ ᎠᏓᏁᏟᏴᏍᏗ ᎤᏟ ᎢᎦᎢ ᎠᎴ ᎤᏟ ᎢᎦᎢ ᎬᏔᏅᎯ; ᎯᎠ ᎢᎬᏱ ᎪᏪᎳᏅᎯ ᎧᏁᎢᏍᏙᏗ ᎯᎠ ᎪᏪᎵ ᏥᏄᏍᏗ ᎤᏙᏢᏒ ᎪᏪᎵ ᎨᏒᎢ ᏂᏛᎴᏅᏓ ᎯᎠ ᎤᎵᏍᏛ ᎯᎠ ᎢᎬᏱ ᏍqᎣᎯᏧᏈ ᏧᏕᏘᏴᏗ ᎾᎥᎢ [[Martial|ᏓᏄᏬ ᎢᏳᏍᏗ]] ᎭᏫᎾᏗᏢ ᎤᏤᎵ Apophoreta <small>CLXXXIV</small>, ᎭᏢᏃ ᎾᏍᎩ ᎠᏍᎦᏯ ᎦᎸᏉᏙᏗ Ꮝ ᎠᎦᏲᎳᏗᏍᏗ. ᎭᏫᎾᏗᏢ ᎯᎠ ᎦᎵᏓᏍᏛ Hellenistic ᎡᎶᎯ ᏱᏂᎬᏛᎾ, ᎯᎠ ᎪᏪᎵ ᎥᏝ ᎤᏁᏉᏤᎸ ᎤᏣᏘ ᎤᎾᏤᎵᏛ ᎠᎴ ᎾᏍᎩ ᎤᏩᏒ ᎭᏫᏂᏗᏢ ᎯᎠ ᏧᎾᏁᎸᏗ ᎾᎥ ᏄᎾᏓᎸ ᏥᏄᏍᏛᎩ ᎾᏍᎩ ᎦᏬᏂᏍᎬ ᎠᎴ ᎤᏁᏉᏤᎸ ᏂᎬᎢ ᎬᏙᏗ. ᎯᎠ ᎠᏓᏅᏖᏗ ᎪᏪᎵ ᎨᏒᎢ ᏄᏓᎷᎸᎾ influenced ᎾᎥᎢ ᎯᎠ ᎦᎶᎯᏍᏗ ᎯᎸᏍᎩ [[wax tablet|ᎠᏜ ᏗᎪᏪᎶᏗ ᎪᏪᎵ]]ᎨᏒᎩ ᎤᎾᏖᎳᏛᎩ ᎢᏧᎳ, ᏥᏄᏍᏗ ᎾᏛᏁ ᎯᎠ ᎧᏁᏨ ᎯᎠ ᎧᏁᏨ ᎪᏪᎵ (ᏍᏆᎳ ᎠᏍᏆᎵᏛ ᎠᏓ) ᎧᏁᎢᏍᏙᏗ. ᎾᎾᎢ ᎢᎬᏱ ᎬᏔᏅᎯ ᎠᎬᏫᏳᏛ ᎾᏍᎩᎾᎢ ᎢᎦ ᏄᎵᏍᏔᏅᏒ, ᎯᎠ ᎪᏪᎵ ᎢᏧᎳ ᎬᏙᏗ ᎯᎠ ᏚᏙᎳᏩᏛᎲ [[parchment|ᎠᏃᏪᎵᏍᎬ]] ᎷᏍᎦᏃᎵ phased ᎠᏥᏄqᎣᏫᏍᎬ ᎠᏃᏪᎵᏍᎬ ᎪᏪᎸ ᎾᎯᏳᎨᏒ ᎯᎠ ᏦᎢᏁ sqohitsuqui tsudetiyvdi .D.. ᎪᎯ ᏄᎵᏍᏔᏅᎩ ᎦᏳᎳ ᎭᏫᎾᏗᏢ ᎯᎠ ᏧᎾᏁᎸᏗ ᏄᏍᏗᏓᏅ ᎠᎴ ᎯᎠ ᎠᎾᏓᏅᏖᏍᎬ ᎾᏍᎩᎾᎢ ᎠᏠᏯᏍᏙᏗ ᎯᎠ ᎪᏪᎵ ᎤᏙᏢᏒ ᎯᎠ ᎪᏪᎵ ᎠᎴ ᎯᎸᏍᎩ: ᎯᎠ ᎪᏪᎵ format ᎨᏒᎢ ᎤᏟ ᎢᎦᎢ ᎠᎳᏏᎾᎯᏍᏗ ᏥᏄᏍᏗ ᎢᏧᎳ ᏗᏍᏆᎨᏂ ᎯᎠ ᎠᏃᏪᎵᏍᎬ ᏭᏚᎸᏛ ᎬᏙᏗ ᏰᎵᏇ ᎾᏍᏋ ᎬᏔᏅᎯ, ᎾᏍᎩ ᎨᏒᎢ ᏩᎾᎯᎨᏍᏙᏗ ᎠᏰᎵ, ᎢᎦᎢ ᎠᎴ searchable. ᎾᏍᎩ ᎨᏒᎢ ᎾᏍᎩ ᎾᏍᏇ ᏰᎵᏊ Ꮎ ᎯᎠ ᏧᎾᏁᎸᏗ ᎪᏪᎵ ᏗᏃᏪᎵᏍᎩ ᎠᏥᎸᏉᏗ ᎤᎾᏤᎵ ᎠᏃᏪᎵᏍᎬ ᎾᎿ ᎤᏰᎸᏛᎢ ᏂᏛᎴᏅᏓ ᎯᎠ ᎦᎵᏓᏍᏛ ᏓᎵᏍᏛ ᎦᏙ ᎤᏍᏗ ᎨᏒᎩ ᎪᏪᎳᏅᎯ ᏄᎶᏒᏍᏛᎾ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᏙᏢᏒ ᎪᏪᎸ.
+ᎠᏃᏪᎵᏍᎬ ᎪᏪᎸ ᎨᏒᎩ ᏙᎢ ᎾᏓᏛᏂᏌᏁᎲ ᎯᎳᎪ ᎢᏳ [[codex|codices]] ᎤᎾᏄᎪᏨ ᎭᏫᎾᏗᏢ ᎯᎠ ᎢᎬᏱ ᏍqᎣᎯᏧᏈ ᏧᏕᏘᏴᏗ .D., ᏥᏄᏍᏗ witnessed ᎾᎥᎢ ᎯᎠ ᎥᏩᏘᏍᎬ ᎭᏫᎾᏗᏢ [[Pompeii]]. ᎦᏂᎸ ᎠᏱᎸᏓ ᎯᎠ ᎪᏪᎵ ᎠᏓᏁᏟᏴᏍᏗ ᎤᏟ ᎢᎦᎢ ᎠᎴ ᎤᏟ ᎢᎦᎢ ᎬᏔᏅᎯ; ᎯᎠ ᎢᎬᏱ ᎪᏪᎳᏅᎯ ᎧᏁᎢᏍᏙᏗ ᎯᎠ ᎪᏪᎵ ᏥᏄᏍᏗ ᎤᏙᏢᏒ ᎪᏪᎵ ᎨᏒᎢ ᏂᏛᎴᏅᏓ ᎯᎠ ᎤᎵᏍᏛ ᎯᎠ ᎢᎬᏱ ᏍqᎣᎯᏧᏈ ᏧᏕᏘᏴᏗ ᎾᎥᎢ [[Martial|ᏓᏄᏬ ᎢᏳᏍᏗ]] ᎭᏫᎾᏗᏢ ᎤᏤᎵ Apophoreta <small>CLXXXIV</small>, ᎭᏢᏃ ᎾᏍᎩ ᎠᏍᎦᏯ ᎦᎸᏉᏙᏗ Ꮝ ᎠᎦᏲᎳᏗᏍᏗ. ᎭᏫᎾᏗᏢ ᎯᎠ ᎦᎵᏓᏍᏛ Hellenistic ᎡᎶᎯ ᏱᏂᎬᏛᎾ, ᎯᎠ ᎪᏪᎵ ᎥᏝ ᎤᏁᏉᏤᎸ ᎤᏣᏘ ᎤᎾᏤᎵᏛ ᎠᎴ ᎾᏍᎩ ᎤᏩᏒ ᎭᏫᏂᏗᏢ ᎯᎠ ᏧᎾᏁᎸᏗ ᎾᎥ ᏄᎾᏓᎸ ᏥᏄᏍᏛᎩ ᎾᏍᎩ ᎦᏬᏂᏍᎬ ᎠᎴ ᎤᏁᏉᏤᎸ ᏂᎬᎢ ᎬᏙᏗ. ᎯᎠ ᎠᏓᏅᏖᏗ ᎪᏪᎵ ᎨᏒᎢ ᏄᏓᎷᎸᎾ influenced ᎾᎥᎢ ᎯᎠ ᎦᎶᎯᏍᏗ ᎯᎸᏍᎩ [[wax tablet|ᎠᏜ ᏗᎪᏪᎶᏗ ᎪᏪᎵ]]ᎨᏒᎩ ᎤᎾᏖᎳᏛᎩ ᎢᏧᎳ, ᏥᏄᏍᏗ ᎾᏛᏁ ᎯᎠ ᎧᏁᏨ ᎯᎠ ᎧᏁᏨ ᎪᏪᎵ (ᏍᏆᎳ ᎠᏍᏆᎵᏛ ᎠᏓ) ᎧᏁᎢᏍᏙᏗ. ᎾᎾᎢ ᎢᎬᏱ ᎬᏔᏅᎯ ᎠᎬᏫᏳᏛ ᎾᏍᎩᎾᎢ ᎢᎦ ᏄᎵᏍᏔᏅᏒ, ᎯᎠ ᎪᏪᎵ ᎢᏧᎳ ᎬᏙᏗ ᎯᎠ ᏚᏙᎳᏩᏛᎲ [[parchment|ᎠᏃᏪᎵᏍᎬ]] ᎷᏍᎦᏃᎵ phased ᎠᏥᏄqᎣᏫᏍᎬ ᎠᏃᏪᎵᏍᎬ ᎪᏪᎸ ᎾᎯᏳᎨᏒ ᎯᎠ ᏦᎢᏁ ᏍᏉᎯᏧᏈ ᏧᏕᏘᏴᏗ .D.. ᎪᎯ ᏄᎵᏍᏔᏅᎩ ᎦᏳᎳ ᎭᏫᎾᏗᏢ ᎯᎠ ᏧᎾᏁᎸᏗ ᏄᏍᏗᏓᏅ ᎠᎴ ᎯᎠ ᎠᎾᏓᏅᏖᏍᎬ ᎾᏍᎩᎾᎢ ᎠᏠᏯᏍᏙᏗ ᎯᎠ ᎪᏪᎵ ᎤᏙᏢᏒ ᎯᎠ ᎪᏪᎵ ᎠᎴ ᎯᎸᏍᎩ: ᎯᎠ ᎪᏪᎵ format ᎨᏒᎢ ᎤᏟ ᎢᎦᎢ ᎠᎳᏏᎾᎯᏍᏗ ᏥᏄᏍᏗ ᎢᏧᎳ ᏗᏍᏆᎨᏂ ᎯᎠ ᎠᏃᏪᎵᏍᎬ ᏭᏚᎸᏛ ᎬᏙᏗ ᏰᎵᏇ ᎾᏍᏋ ᎬᏔᏅᎯ, ᎾᏍᎩ ᎨᏒᎢ ᏩᎾᎯᎨᏍᏙᏗ ᎠᏰᎵ, ᎢᎦᎢ ᎠᎴ searchable. ᎾᏍᎩ ᎨᏒᎢ ᎾᏍᎩ ᎾᏍᏇ ᏰᎵᏊ Ꮎ ᎯᎠ ᏧᎾᏁᎸᏗ ᎪᏪᎵ ᏗᏃᏪᎵᏍᎩ ᎠᏥᎸᏉᏗ ᎤᎾᏤᎵ ᎠᏃᏪᎵᏍᎬ ᎾᎿ ᎤᏰᎸᏛᎢ ᏂᏛᎴᏅᏓ ᎯᎠ ᎦᎵᏓᏍᏛ ᏓᎵᏍᏛ ᎦᏙ ᎤᏍᏗ ᎨᏒᎩ ᎪᏪᎳᏅᎯ ᏄᎶᏒᏍᏛᎾ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᏙᏢᏒ ᎪᏪᎸ.
 
 === ᎠᏰᎵ ᎤᎧᏁᎳ ===
 ==== ᎠᏃᏪᎵᏍᎬ ====
@@ -34,7 +34,7 @@
 # ''Correctors'', ᎦᎪ collated ᎠᎴ ᎤᏠᏱᎭᎢ ᎤᏍᏆᏛᎩ ᎪᏪᎵ ᎬᏙᏗ ᎯᎠ ᎠᏃᏪᎵᏍᎬ ᏂᏛᎴᏅᏓ ᎦᏙ ᎤᏍᏗ ᎾᏍᎩ ᎠᏰᎲ ᏭᏪᏙᎢ ᎠᏛᎯᏍᏔᏅ
 # ''Rubricators'', ᎦᎪ ᎦᎶᏁᏛ ᎭᏫᎾᏗᏢ ᎯᎠ ᎩᎦᎨ ᎪᏪᎵ ᏂᏙᏓᎦᏅᏅᎯ; ᎠᎴ ''Illuminators'', ᎦᎪ ᎦᎶᏁᏛ ᏗᏟᎶᏍᏙᏗ
 
-ᎦᏁᎳ ᎠᏍᎦᏯ ᎤᏓasgaya udal nigesvna ᎬᏂᎨᏒ ᏄᏩᏁᎸ spacing ᎠᏰᎵ ᎤᏂᏁᏨ ᎭᏫᎾᏗᏢ ᎯᎠ ᎦᎵᏉᎩᏁ ᏍqᎣᎯᏧᏈ ᏧᏕᏘᏴᏗ. ᎪᎯ facilitated ᏓᎪᎵᏰᏍᎬ, ᏥᏄᏍᏗ ᎾᏍᎩ ᎯᎠ ᎠᏍᎦᏯ ᎤᏓasgaya udal ᏂᎨᏒᎾ tended ᎾᏍᏋ ᎦᏲᎵᎨ ᎠᏓᏙᎳᎩ ᎬᏙᏗ Latin. ᏱᏂᎬᏛᎾ ᎯᎠ ᎬᏙᏗ ᎤᏜᏅᏛ ᎠᏰᎵ ᎤᏂᏁᏨ ᏄᏛᏁᎸ ᎾᏍᎩ ᏂᎨᏒᎾ ᏗᏙᎳᎩ ᏂᎪᎯᎸ ᎤᏁᏓᏍᏗ ᎤᏓᎷᎸ 12th ᏍqᎣᎯᏧᏈ ᏧᏕᏘᏴᏗ. ᎾᏍᎩ ᎤᎭ ᏭᏪᏙᎢ argued<ref>Paul Saenger. ''ᎤᏜᏅᏛ ᎠᏰᎵ ᎤᏂᏁᏨ: ᎯᎠ ᎠᏓᎴᏂᏍᎬ ᏙᏄᏛᎿ ᏓᎪᎵᏰᏍᎬ''. Stanford ᏗᏕᎶᏆᏍᏗ ᏗᏂᎴᏱᏗᏍᎩ 1997.</ref>, Ꮎ ᎯᎠ ᎬᏙᏗ spacing ᎠᏰᎵ ᎤᏂᏁᏨ ᏓᎾᏛᏁᎵᏍᎬ ᎯᎠ ᎠᎦᏲᎳᏗᏍᏗ ᏂᏛᎴᏅᏓ ᏴᎩ-vocalized ᏓᎪᎵᏰᏍᎬ ᎾᎾᎯ ᏙᏄᏛᎿ ᏓᎪᎵᏰᏍᎬ. 
+ᎦᏁᎳ ᎠᏍᎦᏯ ᎤᏓᎠᏍᎦᏯ udal ᏂᎨᏒᎾ ᎬᏂᎨᏒ ᏄᏩᏁᎸ spacing ᎠᏰᎵ ᎤᏂᏁᏨ ᎭᏫᎾᏗᏢ ᎯᎠ ᎦᎵᏉᎩᏁ ᏍqᎣᎯᏧᏈ ᏧᏕᏘᏴᏗ. ᎪᎯ facilitated ᏓᎪᎵᏰᏍᎬ, ᏥᏄᏍᏗ ᎾᏍᎩ ᎯᎠ ᎠᏍᎦᏯ ᎤᏓᎠᏍᎦᏯ udal ᏂᎨᏒᎾ tended ᎾᏍᏋ ᎦᏲᎵᎨ ᎠᏓᏙᎳᎩ ᎬᏙᏗ Latin. ᏱᏂᎬᏛᎾ ᎯᎠ ᎬᏙᏗ ᎤᏜᏅᏛ ᎠᏰᎵ ᎤᏂᏁᏨ ᏄᏛᏁᎸ ᎾᏍᎩ ᏂᎨᏒᎾ ᏗᏙᎳᎩ ᏂᎪᎯᎸ ᎤᏁᏓᏍᏗ ᎤᏓᎷᎸ 12th ᏍqᎣᎯᏧᏈ ᏧᏕᏘᏴᏗ. ᎾᏍᎩ ᎤᎭ ᏭᏪᏙᎢ argued<ref>Paul Saenger. ''ᎤᏜᏅᏛ ᎠᏰᎵ ᎤᏂᏁᏨ: ᎯᎠ ᎠᏓᎴᏂᏍᎬ ᏙᏄᏛᎿ ᏓᎪᎵᏰᏍᎬ''. Stanford ᏗᏕᎶᏆᏍᏗ ᏗᏂᎴᏱᏗᏍᎩ 1997.</ref>, Ꮎ ᎯᎠ ᎬᏙᏗ spacing ᎠᏰᎵ ᎤᏂᏁᏨ ᏓᎾᏛᏁᎵᏍᎬ ᎯᎠ ᎠᎦᏲᎳᏗᏍᏗ ᏂᏛᎴᏅᏓ ᏴᎩ-vocalized ᏓᎪᎵᏰᏍᎬ ᎾᎾᎯ ᏙᏄᏛᎿ ᏓᎪᎵᏰᏍᎬ. 
 
 ᎯᎠ ᎢᎬᏱ ᏗᎪᏪᎵ ᎬᏔᏅᎯ [[parchment|ᎠᏃᏪᎵᏍᎬ]] ᎠᎴ [[vellum parchment|ᎠᏃᏪᎵᏍᎬ]] (ᏩᎦᎠᎩᎾ ᎦᏁᎦ) ᎾᏍᎩᎾᎢ ᎯᎠ ᏚᏆᏓᏛ. ᎯᎠ ᎪᏪᎵ ᏗᎫᏝᎢ ᎨᏒᎩ ᎪᏢᏅᎯ ᎠᏓ ᎠᎴ ᎫᏝᎢ ᎬᏙᏗ ᎦᏃᏥ. ᏥᏄᏍᏗ ᎠᎧᏲᏔᏅ ᎠᏃᏪᎵᏍᎬ ᏫᏚᏳᎪᏛ ᎢᏰᎵᏍᏗ ᎯᎠ ᎤᏙᏢᏒ ᎤᏓᎷᎸ ᏧᎵᎬᏩᎳᏅᎯ, ᎯᎠ ᏗᎪᏪᎵ ᎨᏒᎩ ᏰᎵ ᎢᎩᏛ ᎢᎬᏁᎸ ᎬᏙᏗ ᏧᏠᎯᏍᏗ ᎠᎴ ᎦᎸᏍᏙᏗ. ᎾᎯᏳᎨᏒ ᎣᏂᏯᎨᏍᏙᏗ [[Middle Ages|ᎠᏰᎵ ᎤᎧᏁᎳ]], ᎯᎳᎪ ᎢᏳ ᏴᏫ ᎤᏁᏓᏍᏗ libraries ᎤᎾᏄᎪᏨ, ᏗᎪᏪᎵ ᎨᏒᎩ ᎢᏳᏓᎵᎭ chained bookshelf ᎠᎴ [[desk|ᏗᎪᏪᎶᏗ]] ᎠᎴᏫᏍᏔᏅ ᎦᎶᏄᎮᏛ. ᎯᎠ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎤᏯᏅᎲ ''libri catenati'' ᎨᏒᎩ ᎬᏔᏅᎯ ᎦᎸᎳᏗᏢ 18th ᏍqᎣᎯᏧᏈ ᏧᏕᏘᏴᏗ. 
 
@@ -64,7 +64,7 @@
 
 [[Monotype|ᎦᎴᏴᏗᏍᎬᎢ]] ᎠᎴ [[linotype|ᎦᎴᏴᏗᏍᎬᎢ]] presses ᎨᏒᎩ ᎬᏂᎨᏒ ᏄᏩᏁᎸ ᎭᏫᎾᏗᏢ ᎯᎠ ᎣᏂᏱᏳ 19th ᏍqᎣᎯᏧᏈ ᏧᏕᏘᏴᏗ. ᎤᏅᏌ ᏰᎵᏇ ᎠᏫᏒᏗ ᎤᏟ ᎢᎦᎢ ᎬᎾᏬᏍᎬ 6,000 ᎪᏪᎵ ᏂᏙᏓᎦᏅᏅᎯ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᏑᏟᎶᏛ ᎠᎴ ᏂᎦᏛ ᎠᏍᏓᏅᏅ ᏗᎦᎪᏗ ᎾᎾᎢ ᏌᏊ ᎢᏳᏩᎫᏗ.
 
-ᎯᎠ centuries ᎤᎶᏐᏅ ᎯᎠ 15th ᏍqᎣᎯᏧᏈ ᏧᏕᏘᏴᏗ ᎨᏒᎩ ᎯᎠ ᎢᏴ ᎤᏂᏩᏒ ᎾᎿ ᎪᏢᎯᏏᏍᎬ ᎢᏧᎳ ᎯᎠ ᎦᎴᏴᏗᏍᎬᎢ ᏗᏂᎴᏱᏗᏍᎩ ᎠᎴ ᎯᎠ ᏄᏍᏗᏓᏅ ᎾᏍᎩᎾᎢ [[freedom of the press|ᏙᎯ ᎠᏕᏗ ᎯᎠ ᏗᏂᎴᏱᏗᏍᎩ]] ᏗᎬᏩᎶᏒ ᎯᎠ ᎢᎦᎢ ᎢᎦᏘ tohi adedi ᎦᏅᏍᏙᎯᏍᏗ censorship ᏧᏂᎧᎿᏩᏛᏍᏗ. ᎠᎪᏩᏛᏗ ᎾᏍᎩ ᎾᏍᏇ [[intellectual property|ᎢᎦᏘᎭ ᎬᏗ ᎪᎳᏨᎯ ᏧᎬᏩᎶᏗ ᏂᎬᎿᏅ]], [[public domain|ᏴᏫ ᎤᏁᏓᏍᏗ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ]], [[copyright|ᏧᎬᏩᎶᏗ ᏂᎬᎿᏅ]]. ᎭᏫᎾᏗᏢ ᎠᏰᎵ ᏯᏛᎾ ᎠᎺᏉᎯ-20th ᏍqᎣᎯᏧᏈ ᏧᏕᏘᏴᏗ, Europe ᎪᏪᎵ ᎠᏛᎯᏍᏙᏗ ᎠᏰᎲ risen ᎦᏬᎯᎸᏙᏗ 200,000 ᎦᏓ ᎦᏂᏴᏙ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᏑᏕᏘᏴᏓ.
+ᎯᎠ centuries ᎤᎶᏐᏅ ᎯᎠ 15th ᏍqᎣᎯᏧᏈ ᏧᏕᏘᏴᏗ ᎨᏒᎩ ᎯᎠ ᎢᏴ ᎤᏂᏩᏒ ᎾᎿ ᎪᏢᎯᏏᏍᎬ ᎢᏧᎳ ᎯᎠ ᎦᎴᏴᏗᏍᎬᎢ ᏗᏂᎴᏱᏗᏍᎩ ᎠᎴ ᎯᎠ ᏄᏍᏗᏓᏅ ᎾᏍᎩᎾᎢ [[freedom of the press|ᏙᎯ ᎠᏕᏗ ᎯᎠ ᏗᏂᎴᏱᏗᏍᎩ]] ᏗᎬᏩᎶᏒ ᎯᎠ ᎢᎦᎢ ᎢᎦᏘ ᏙᎯ ᎠᏕᏗ ᎦᏅᏍᏙᎯᏍᏗ censorship ᏧᏂᎧᎿᏩᏛᏍᏗ. ᎠᎪᏩᏛᏗ ᎾᏍᎩ ᎾᏍᏇ [[intellectual property|ᎢᎦᏘᎭ ᎬᏗ ᎪᎳᏨᎯ ᏧᎬᏩᎶᏗ ᏂᎬᎿᏅ]], [[public domain|ᏴᏫ ᎤᏁᏓᏍᏗ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ]], [[copyright|ᏧᎬᏩᎶᏗ ᏂᎬᎿᏅ]]. ᎭᏫᎾᏗᏢ ᎠᏰᎵ ᏯᏛᎾ ᎠᎺᏉᎯ-20th ᏍqᎣᎯᏧᏈ ᏧᏕᏘᏴᏗ, Europe ᎪᏪᎵ ᎠᏛᎯᏍᏙᏗ ᎠᏰᎲ risen ᎦᏬᎯᎸᏙᏗ 200,000 ᎦᏓ ᎦᏂᏴᏙ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᏑᏕᏘᏴᏓ.
 
 == ᎠᏛᎯᏍᏙᏗ ᏗᎪᏪᎵ ==
 
