--- a/ᏣᎳᎩ_ᎧᏬᏂᎯᏍᏗ.mw
+++ b/ᏣᎳᎩ_ᎧᏬᏂᎯᏍᏗ.mw
@@ -207,6 +207,7 @@
 * [http://www.unicode.org/charts/PDF/U13A0.pdf Unicode Chart]
 * [http://wiki.langwiki.info/Cherokee WikiLang ᏣᎳᎩ page (Basic grammar information)]
 * [http://www.cherokeelessons.com/ CherokeeLessons.com] (Hosts Creative Commons licensed materials including a textbook covering grammar and many hours of challenge/response based audio lesson files).
+* [http://kuscholarworks.ku.edu/dspace/bitstream/1808/4212/1/umi-ku-2613_1.pdf A REFERENCE GRAMMAR OF OKLAHOMA CHEROKEE]
 * [http://www.unilang.org/viewtopic.php?f=99&t=27425&st=0&sk=t&sd=a&start=120#p615095 UNILANG forum for freely available teaching materials.] (Includes PDF textbook and audio files).
 
 {{stub}}
