--- a/ᎪᏪᎵ.mw
+++ b/ᎪᏪᎵ.mw
@@ -2,7 +2,7 @@
 
 '''ᎪᏪᎵ''' ᎨᏒᎢ ᎤᏓᏂᏝᏅ ᏗᎬᎯᏓ [[paper|Ꭺ]], [[parchment|ᎠᏃᏪᎵᏍᎬ]] ᎠᎴ ᏐᎢ ᏭᏚᎸᏛ ᎬᏙᏗ ᎬᏙᏗ ᎠᎬᎭᎸᏓ ᏓᎵᏍᏛ ᎪᏪᎳᏅᎯ ᎾᎿ ᎠᏂ, ᏩᎦᏛ ᎢᏧᎳ ᎨᎳᏛᏍᏗ ᏌᏊ ᎠᏍᏛᎢ ᎭᏫᏂᏗᏢ ᏗᎫᏝᎢ. ᎠᏂᏏᏴᏫᎭ ᎠᏍᏆᎨᏂ ᏗᎬᎯᏓ ᎨᏒᎢ ᎤᏯᏅᎲ [[Page (paper)|ᎤᏆᏓᏛ]] ᎠᎴ ᏏᏴᏫ ᏗᎬᎯᏓ ᎭᏫᏂᏗᏢ ᎪᏪᎵ ᎠᎾᏍᎬᏘ ᎾᏍᏋ ᎤᏯᏅᎲ ᎤᎦᎶᎬ. ᎪᏪᎵ ᎨᏒᎢ ᎾᏍᎩ ᎾᏍᏇ ᎠᎦᏔᎯ ᎪᏪᎵ ᏗᎦᎸᏫᏍᏓᏁᏗ ᎠᎴ ᏄᎬᏫᏳᏒ ᎠᏰᏗ ᎢᏳᏓᏛ ᏯᏛᎿ ᏗᎦᎸᏫᏍᏓᏁᏗ. ᎪᏪᎵ ᎠᏛᎯᏍᏔᏅ ᎭᏫᎾᏗᏢ electronic format ᎨᏒᎢ ᎤᎾᏅᏛ ᏥᏄᏍᏗ [[e-book|e-ᎪᏪᎵ]].
 
-ᎭᏫᎾᏗᏢ [[library and information science|ᎪᏪᎵ ᏕᎦᏅ ᏗᎪᎵᏰᏗ ᎠᎴ ᎠᏓᏃᎯᏎᏗ ᎠᎦᏙᎲᏍᏗ]], ᎪᏪᎵ ᎨᏒᎢ ᎤᏯᏅᎲ [[monograph|ᎠᏃᏪᎵᏍᎬ]] ᎠᎪᏩᏛᏗ ᎾᏍᎩ ᏂᏛᎴᏅᏓ ᎦᏯᎢᏒ [[publication|ᏕᎦᏃᏣᎸ]]ᏯᏛᎿ ᏥᏄᏍᏗ [[magazine|ᎪᏪᎵ ᏗᎪᎵᏰᏗ]], [[journal|ᏕᎪᏪᎸ]]ᎠᎴ [[newspaper|ᎪᏪᎵ ᎦᎴᏴᏔᏅ]].
+ᎭᏫᎾᏗᏢ [[library and information science|ᎪᏪᎵ ᏕᎦᏅ ᏗᎪᎵᏰᏗ ᎠᎴ ᎠᏓᏃᎯᏎᏗ ᎠᎦᏙᎲᏍᏗ]], ᎪᏪᎵ ᎨᏒᎢ ᎤᏯᏅᎲ [[monograph|ᎠᏃᏪᎵᏍᎬ]] ᎠᎪᏩᏛᏗ ᎾᏍᎩ ᏂᏛᎴᏅᏓ ᎦᏯᎢᏒ [[publication|ᏕᎦᏃᏣᎸ]] ᏯᏛᎿ ᏥᏄᏍᏗ [[magazine|ᎪᏪᎵ ᏗᎪᎵᏰᏗ]], [[journal|ᏕᎪᏪᎸ]] ᎠᎴ [[newspaper|ᎪᏪᎵ ᎦᎴᏴᏔᏅ]].
 
 ᏗᎦᎴᏴᏗᏍᎩ ᎠᎾᏍᎬᏘ ᎠᏛᎯᏍᏙᏗ ᎡᎳᏗ-ᏓᎬᏩᎶᏛ, ᎬᏂᎨᏒ ᏄᏍᏛᎢ-ᎪᎯᏳᏙᏗ ᎦᏟᏌᏅ ᎦᎴᏴᏔᏅ ᎤᎾᏅᏛ ᏥᏄᏍᏗ [[Galley proof|ᎣᏍᏛᏗᏍᏗ]] ᎠᎴ 'ᏩᎦᏛ ᏗᎪᎯᏳᏙᏗ' ᎾᏍᎩᎾᎢ promotional ᏂᏚᏰᎸᏛᎢ, ᏯᏛᎿ ᏥᏄᏍᏗ ᎠᏥᎡᏗᏱ ᏅᎬᎪᏙᏗ ᎭᏫᎾᏗᏢ ᎠᏓᏌᎳᏙᏗ ᏕᎦᏃᏣᎸ. ᎣᏍᏛᏗᏍᏗ ᎠᎴ ᎤᏠᏱᎭ ᎪᏢᏅᎯ ᏥᏄᏍᏗ ᎤᏍᏗ ᏧᎬᏩᎶᏗ ᏥᏄᏍᏗ ᏰᎵᏊ, ᎣᏂ ᏧᏩᎫᏛ ᎤᏅᏌ ᎠᎴ ᎾᏍᎩ ᏂᎨᏒᎾ ᏄᏪᎵᏒ ᎾᏍᎩᎾᎢ ᎦᎾᏗᏅᏗ.
 
@@ -14,15 +14,15 @@
 === ᏧqᎠᎫᏔᏅᏒ ===
 [[File:Pompeii-woman.jpg|thumb|right|ᎠᎨᏴ ᏚᏂᏴᏒ ᎪᏪᎵ (ᎠᎴ ᎠᏜ ᏗᎪᏪᎶᏗ ᎪᏪᎵ) ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᏙᏢᏒ ᎯᎠ [[codex|ᎪᏪᎵ]]. ᎠᏐᏴ ᎠᏂᎶᏁᏍᎬ ᏂᏛᎴᏅᏓ Pompeii, ᎤᏓᎷᎸ 79 ᏂᏓᏙᎳᎬᎾ.]]
 [[File:Old book bindings.jpg|thumb|right|ᎠᎦᏴᎵ ᏗᎪᏪᎵ ᎾᎾᎢ ᎯᎠ [[Merton College library|Merton ᎦᎸᎳᏗᏴ ᏧᎾᏕᎶᏆᏍᏗ ᎪᏪᎵ ᏕᎦᏅ ᏗᎪᎵᏰᏗ]] ᎾᎾᎢ [[University of Oxford|Oxford]].]]
-ᎯᎠ ᎧᏁᏨᎯ ᎬᏂᎨᏒ ᎢᎬᏁᏗ ([[word of mouth|ᎧᏁᏨ ᎠᎰᎵ]], [[tradition|ᎧᏃᎮᎸᎯ]], [[hearsay|ᎠᏛᎦᏅᎯ]]) ᎨᏒᎢ ᎯᎠ ᎳᏳᏕᏘᏴᏓ ᎠᏫᏗᏍᎩ ᎨᏥᏃᎯᏎᏗ ᎠᎴ ᎢᏗᎦᎸᎳᏗ. ᎯᎳᎪ ᎢᏳ [[writing system|ᎠᏃᏪᎵᏍᎬ ᎢᏯᏛᏁᎵᏓᏍᏗ]]ᎨᏒᎩ ᎦᎾᎬᎢ ᎭᏫᎾᏗᏢ [[ancient civilization|ᎯᎸᎯᏳᎢ ᎠᏓᏅᏘᏐᏗ]], ᎾᎥᏂᎨᏍᏗ ᎢᎬᏩᏕᎴᎩ Ꮎ ᏰᎵᏇ ᎾᏍᏋ ᎪᏪᎳᏅᎯ ᎾᏍᎩ—ᏅᏯ, [[clay tablet|ᎦᏓᏆᎵ]], ᏡᎬ ᎤᏯᎸ, ᎠᎾᎦᎵᏍᎩ ᎦᏂᏱᏍᎩ ᏗᎬᎯᏓ—ᏥᏄᏍᏛᎩ ᎬᏔᏅᎯ ᎾᏍᎩᎾᎢ ᎠᏃᏪᎵᏍᎬ.
+ᎯᎠ ᎧᏁᏨᎯ ᎬᏂᎨᏒ ᎢᎬᏁᏗ ([[word of mouth|ᎧᏁᏨ ᎠᎰᎵ]], [[tradition|ᎧᏃᎮᎸᎯ]], [[hearsay|ᎠᏛᎦᏅᎯ]]) ᎨᏒᎢ ᎯᎠ ᎢᏳᏕᏘᏴᏓ ᎠᏫᏗᏍᎩ ᎨᏥᏃᎯᏎᏗ ᎠᎴ ᎢᏗᎦᎸᎳᏗ. ᎯᎳᎪ ᎢᏳ [[writing system|ᎠᏃᏪᎵᏍᎬ ᎢᏯᏛᏁᎵᏓᏍᏗ]] ᎨᏒᎩ ᎦᎾᎬᎢ ᎭᏫᎾᏗᏢ [[ancient civilization|ᎯᎸᎯᏳᎢ ᎠᏓᏅᏘᏐᏗ]], ᎾᎥᏂᎨᏍᏗ ᎢᎬᏩᏕᎴᎩ Ꮎ ᏰᎵᏇ ᎾᏍᏋ ᎪᏪᎳᏅᎯ ᎾᏍᎩ—ᏅᏯ, [[clay tablet|ᎦᏓᏆᎵ]], ᏡᎬ ᎤᏯᎸ, ᎠᎾᎦᎵᏍᎩ ᎦᏂᏱᏍᎩ ᏗᎬᎯᏓ—ᏥᏄᏍᏛᎩ ᎬᏔᏅᎯ ᎾᏍᎩᎾᎢ ᎠᏃᏪᎵᏍᎬ.
 
 ==== ᎪᏪᎸ ====
-ᎭᏫᎾᏗᏢ [[Ancient Egypt|ᎯᎸᎯᏳᎢ Egypt]], [[papyrus|ᎠᏃᏪᎵᏍᎬ]] (ᎤᏙᏢᏒ [[paper|Ꭺ]] ᎪᏢᏅᎯ ᏂᏛᎴᏅᏓ ᎯᎠ ᎤᏩᏂᎦᎸ ᎯᎠ ᎠᏃᏪᎵᏍᎬ ᎦᎪᏘ) ᏥᏄᏍᏛᎩ ᎦᏳᎳ ᎬᏔᏅᎯ ᎾᏍᎩᎾᎢ ᎠᏃᏪᎵᏍᎬ ᏥᏄᏍᏗ ᏂᏛᎴᏅᏓ 2400 BC. ᎠᏃᏪᎵᏍᎬ ᏗᎬᎯᏓ ᎨᏒᎩ glued ᎢᏧᎳ ᎤᏙᏢᏒ [[Scroll (parchment)|ᎪᏪᎸ]]. ᎪᎯ ᏄᏍᏛ ᎢᏯᏛᏁᏗ ᎤᏁᏉᏤᎸ ᏂᎬᎢ ᎤᎾᏤᎵᏛ ᎭᏫᎾᏗᏢ ᎯᎠ Hellenistic ᎠᎴ ᎶᎻ ᎡᎶᎯ, ᎾᏍᎩ ᎤᏁᎳᎩ ᎢᏧᎳ ᎤᎭ ᎪᎯᏳᏙ Ꮎ ᏡᎬ ᎤᏯᎸ (Latin ''liber'', ᏂᏛᎴᏅᏓ ᎾᎿᎢ ᎾᏍᎩ ᎾᏍᏇ [[library|ᎪᏪᎵ ᏕᎦᏅ ᏗᎪᎵᏰᏗ]]) ᏥᏄᏍᏛᎩ ᎬᏔᏅᎯ ᏂᏛᎴᏅᏓ ᎢᎬᏱᎨᏍᏙᏗ ᎢᏧᏩᎪᏗ ᎭᏫᎾᏗᏢ Italy. ᎠᎴ ᎾᎯᏳᎨᏒ ᎤᎪᏗᏗ ᎯᎠ [[Classical antiquity|ᎠᏓᏙᎵᏍᏗ ᎠᎴᏫᏍᏙᏗ]] ᎠᏃᏪᎵᏍᎬ ᏥᏄᏍᏛᎩ ᎾᎥᏂᎨᏍᏗ ᎢᏗᎦᏘᎭ ᎬᏙᏗ ᎠᏃᏪᎵᏍᎬ ᏭᏚᎸᏛ ᎬᏙᏗ ᎠᎴ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎯᎠ ᎤᏂᏁᏨ 'Ꭺ' ᎠᎴ 'ᏧᎭᎨᏓ ᎪᏪᎵ' ᎢᏧᎳ ᎦᎷᏨ ᏂᏛᎴᏅᏓ ᎠᎪᎢ ᎤᏂᏁᏨ ᎦᏛᎬᎢ ᎠᏃᏪᎵᏍᎬ.
+ᎭᏫᎾᏗᏢ [[Ancient Egypt|ᎯᎸᎯᏳᎢ Egypt]], [[papyrus|ᎠᏃᏪᎵᏍᎬ]] (ᎤᏙᏢᏒ [[paper|Ꭺ]] ᎪᏢᏅᎯ ᏂᏛᎴᏅᏓ ᎯᎠ ᎤᏩᏂᎦᎸ ᎯᎠ ᎠᏃᏪᎵᏍᎬ ᎦᎪᏘ) ᏥᏄᏍᏛᎩ ᎦᏳᎳ ᎬᏔᏅᎯ ᎾᏍᎩᎾᎢ ᎠᏃᏪᎵᏍᎬ ᏥᏄᏍᏗ ᏂᏛᎴᏅᏓ 2400 BC. ᎠᏃᏪᎵᏍᎬ ᏗᎬᎯᏓ ᎨᏒᎩ glued ᎢᏧᎳ ᎤᏙᏢᏒ [[Scroll (parchment)|ᎪᏪᎸ]]. ᎪᎯ ᏄᏍᏛ ᎢᏯᏛᏁᏗ ᎤᏁᏉᏤᎸ ᏂᎬᎢ ᎤᎾᏤᎵᏛ ᎭᏫᎾᏗᏢ ᎯᎠ Hellenistic ᎠᎴ ᎶᎻ ᎡᎶᎯ, ᎾᏍᎩ ᎤᏁᎳᎩ ᎢᏧᎳ ᎤᎭ ᎪᎯᏳᏙ Ꮎ ᏡᎬ ᎤᏯᎸ ([[Latin|ᎳᏗᎾ]] ''liber'', ᏂᏛᎴᏅᏓ ᎾᎿᎢ ᎾᏍᎩ ᎾᏍᏇ [[library|ᎪᏪᎵ ᏕᎦᏅ ᏗᎪᎵᏰᏗ]]) ᏥᏄᏍᏛᎩ ᎬᏔᏅᎯ ᏂᏛᎴᏅᏓ ᎢᎬᏱᎨᏍᏙᏗ ᎢᏧᏩᎪᏗ ᎭᏫᎾᏗᏢ Italy. ᎠᎴ ᎾᎯᏳᎨᏒ ᎤᎪᏗᏗ ᎯᎠ [[Classical antiquity|ᎠᏓᏙᎵᏍᏗ ᎠᎴᏫᏍᏙᏗ]] ᎠᏃᏪᎵᏍᎬ ᏥᏄᏍᏛᎩ ᎾᎥᏂᎨᏍᏗ ᎢᏗᎦᏘᎭ ᎬᏙᏗ ᎠᏃᏪᎵᏍᎬ ᏭᏚᎸᏛ ᎬᏙᏗ ᎠᎴ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎯᎠ ᎤᏂᏁᏨ 'Ꭺ' ᎠᎴ 'ᏧᎭᎨᏓ ᎪᏪᎵ' ᎢᏧᎳ ᎦᎷᏨ ᏂᏛᎴᏅᏓ ᎠᎪᎢ ᎤᏂᏁᏨ ᎦᏛᎬᎢ ᎠᏃᏪᎵᏍᎬ.
 
-ᎭᏫᎾᏗᏢ ᏧᎾᏕᎶᏆᏍᏗ, ᎭᏫᎾᏗᏢ ᎢᎦ ᏄᎵᏍᏔᏅᏒ ᎠᎴ ᎾᏍᎩᎾᎢ ᎠᎩᏍᎬᎢ ᏓᏓᏚᎬ ᎪᏪᎵ [[wax tablet|ᎠᏜ ᏗᎪᏪᎶᏗ ᎪᏪᎵ]]ᎨᏒᎩ ᎯᎠ ᏄᎶᏒᏍᏛᎾ ᎠᏃᏪᎵᏍᎬ ᏭᏚᎸᏛ ᎬᏙᏗ. ᎠᏜ ᏗᎪᏪᎶᏗ ᎪᏪᎵ ᎠᏰᎲ ᎯᎠ ᎠᏜᏅᎠᏓᏗᏍᎬ ᎠᎴᏂᏙᎲ reusable: ᎯᎠ ᎠᏜ ᏰᎵᏇ ᎾᏍᏋ melted ᎠᎴ ᎢᏤ ᏓᎵᏍᏛ carved ᎾᎾᎯ ᎯᎠ ᎠᏜ. ᎯᎠ ᏄᏍᏛ ᎢᏯᏛᏁᏗ ᎢᏯᏛᏁᏗ ᎯᎸᏍᎩ ᎠᏜ ᏗᎪᏪᎶᏗ ᎪᏪᎵ ᎢᏧᎳ ᎨᏒᎢ ᏰᎵᏊ ᏭᎵᏍᎨᏗᏴ ᎾᏍᎩᎾᎢ ᎪᎯᏊ ᎢᏴ ᏥᎩ ᏗᎪᏪᎵ.
+ᎭᏫᎾᏗᏢ ᏧᎾᏕᎶᏆᏍᏗ, ᎭᏫᎾᏗᏢ ᎢᎦ ᏄᎵᏍᏔᏅᏒ ᎠᎴ ᎾᏍᎩᎾᎢ ᎠᎩᏍᎬᎢ ᏓᏓᏚᎬ ᎪᏪᎵ [[wax tablet|ᎠᏜ ᏗᎪᏪᎶᏗ ᎪᏪᎵ]] ᎨᏒᎩ ᎯᎠ ᏄᎶᏒᏍᏛᎾ ᎠᏃᏪᎵᏍᎬ ᏭᏚᎸᏛ ᎬᏙᏗ. ᎠᏜ ᏗᎪᏪᎶᏗ ᎪᏪᎵ ᎠᏰᎲ ᎯᎠ ᎠᏜᏅᎠᏓᏗᏍᎬ ᎠᎴᏂᏙᎲ reusable: ᎯᎠ ᎠᏜ ᏰᎵᏇ ᎾᏍᏋ melted ᎠᎴ ᎢᏤ ᏓᎵᏍᏛ carved ᎾᎾᎯ ᎯᎠ ᎠᏜ. ᎯᎠ ᏄᏍᏛ ᎢᏯᏛᏁᏗ ᎢᏯᏛᏁᏗ ᎯᎸᏍᎩ ᎠᏜ ᏗᎪᏪᎶᏗ ᎪᏪᎵ ᎢᏧᎳ ᎨᏒᎢ ᏰᎵᏊ ᏭᎵᏍᎨᏗᏴ ᎾᏍᎩᎾᎢ ᎪᎯᏊ ᎢᏴ ᏥᎩ ᏗᎪᏪᎵ.
 
 ==== ᎪᏪᎵ ====
-ᎠᏃᏪᎵᏍᎬ ᎪᏪᎸ ᎨᏒᎩ ᏙᎢ ᎾᏓᏛᏂᏌᏁᎲ ᎯᎳᎪ ᎢᏳ [[codex|codices]] ᎤᎾᏄᎪᏨ ᎭᏫᎾᏗᏢ ᎯᎠ ᎢᎬᏱ ᏍqᎣᎯᏧᏈ ᏧᏕᏘᏴᏗ .D., ᏥᏄᏍᏗ witnessed ᎾᎥᎢ ᎯᎠ ᎥᏩᏘᏍᎬ ᎭᏫᎾᏗᏢ [[Pompeii]]. ᎦᏂᎸ ᎠᏱᎸᏓ ᎯᎠ ᎪᏪᎵ ᎠᏓᏁᏟᏴᏍᏗ ᎤᏟ ᎢᎦᎢ ᎠᎴ ᎤᏟ ᎢᎦᎢ ᎬᏔᏅᎯ; ᎯᎠ ᎢᎬᏱ ᎪᏪᎳᏅᎯ ᎧᏁᎢᏍᏙᏗ ᎯᎠ ᎪᏪᎵ ᏥᏄᏍᏗ ᎤᏙᏢᏒ ᎪᏪᎵ ᎨᏒᎢ ᏂᏛᎴᏅᏓ ᎯᎠ ᎤᎵᏍᏛ ᎯᎠ ᎢᎬᏱ ᏍqᎣᎯᏧᏈ ᏧᏕᏘᏴᏗ ᎾᎥᎢ [[Martial|ᏓᏄᏬ ᎢᏳᏍᏗ]] ᎭᏫᎾᏗᏢ ᎤᏤᎵ Apophoreta <small>CLXXXIV</small>, ᎭᏢᏃ ᎾᏍᎩ ᎠᏍᎦᏯ ᎦᎸᏉᏙᏗ Ꮝ ᎠᎦᏲᎳᏗᏍᏗ. ᎭᏫᎾᏗᏢ ᎯᎠ ᎦᎵᏓᏍᏛ Hellenistic ᎡᎶᎯ ᏱᏂᎬᏛᎾ, ᎯᎠ ᎪᏪᎵ ᎥᏝ ᎤᏁᏉᏤᎸ ᎤᏣᏘ ᎤᎾᏤᎵᏛ ᎠᎴ ᎾᏍᎩ ᎤᏩᏒ ᎭᏫᏂᏗᏢ ᎯᎠ ᏧᎾᏁᎸᏗ ᎾᎥ ᏄᎾᏓᎸ ᏥᏄᏍᏛᎩ ᎾᏍᎩ ᎦᏬᏂᏍᎬ ᎠᎴ ᎤᏁᏉᏤᎸ ᏂᎬᎢ ᎬᏙᏗ. ᎯᎠ ᎠᏓᏅᏖᏗ ᎪᏪᎵ ᎨᏒᎢ ᏄᏓᎷᎸᎾ influenced ᎾᎥᎢ ᎯᎠ ᎦᎶᎯᏍᏗ ᎯᎸᏍᎩ [[wax tablet|ᎠᏜ ᏗᎪᏪᎶᏗ ᎪᏪᎵ]]ᎨᏒᎩ ᎤᎾᏖᎳᏛᎩ ᎢᏧᎳ, ᏥᏄᏍᏗ ᎾᏛᏁ ᎯᎠ ᎧᏁᏨ ᎯᎠ ᎧᏁᏨ ᎪᏪᎵ (ᏍᏆᎳ ᎠᏍᏆᎵᏛ ᎠᏓ) ᎧᏁᎢᏍᏙᏗ. ᎾᎾᎢ ᎢᎬᏱ ᎬᏔᏅᎯ ᎠᎬᏫᏳᏛ ᎾᏍᎩᎾᎢ ᎢᎦ ᏄᎵᏍᏔᏅᏒ, ᎯᎠ ᎪᏪᎵ ᎢᏧᎳ ᎬᏙᏗ ᎯᎠ ᏚᏙᎳᏩᏛᎲ [[parchment|ᎠᏃᏪᎵᏍᎬ]] ᎷᏍᎦᏃᎵ phased ᎠᏥᏄqᎣᏫᏍᎬ ᎠᏃᏪᎵᏍᎬ ᎪᏪᎸ ᎾᎯᏳᎨᏒ ᎯᎠ ᏦᎢᏁ ᏍᏉᎯᏧᏈ ᏧᏕᏘᏴᏗ .D.. ᎪᎯ ᏄᎵᏍᏔᏅᎩ ᎦᏳᎳ ᎭᏫᎾᏗᏢ ᎯᎠ ᏧᎾᏁᎸᏗ ᏄᏍᏗᏓᏅ ᎠᎴ ᎯᎠ ᎠᎾᏓᏅᏖᏍᎬ ᎾᏍᎩᎾᎢ ᎠᏠᏯᏍᏙᏗ ᎯᎠ ᎪᏪᎵ ᎤᏙᏢᏒ ᎯᎠ ᎪᏪᎵ ᎠᎴ ᎯᎸᏍᎩ: ᎯᎠ ᎪᏪᎵ format ᎨᏒᎢ ᎤᏟ ᎢᎦᎢ ᎠᎳᏏᎾᎯᏍᏗ ᏥᏄᏍᏗ ᎢᏧᎳ ᏗᏍᏆᎨᏂ ᎯᎠ ᎠᏃᏪᎵᏍᎬ ᏭᏚᎸᏛ ᎬᏙᏗ ᏰᎵᏇ ᎾᏍᏋ ᎬᏔᏅᎯ, ᎾᏍᎩ ᎨᏒᎢ ᏩᎾᎯᎨᏍᏙᏗ ᎠᏰᎵ, ᎢᎦᎢ ᎠᎴ searchable. ᎾᏍᎩ ᎨᏒᎢ ᎾᏍᎩ ᎾᏍᏇ ᏰᎵᏊ Ꮎ ᎯᎠ ᏧᎾᏁᎸᏗ ᎪᏪᎵ ᏗᏃᏪᎵᏍᎩ ᎠᏥᎸᏉᏗ ᎤᎾᏤᎵ ᎠᏃᏪᎵᏍᎬ ᎾᎿ ᎤᏰᎸᏛᎢ ᏂᏛᎴᏅᏓ ᎯᎠ ᎦᎵᏓᏍᏛ ᏓᎵᏍᏛ ᎦᏙ ᎤᏍᏗ ᎨᏒᎩ ᎪᏪᎳᏅᎯ ᏄᎶᏒᏍᏛᎾ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᏙᏢᏒ ᎪᏪᎸ.
+ᎠᏃᏪᎵᏍᎬ ᎪᏪᎸ ᎨᏒᎩ ᏙᎢ ᎾᏓᏛᏂᏌᏁᎲ ᎯᎳᎪ ᎢᏳ [[codex|codices]] ᎤᎾᏄᎪᏨ ᎭᏫᎾᏗᏢ ᎯᎠ ᎢᎬᏱ ᏍqᎣᎯᏧᏈ ᏧᏕᏘᏴᏗ .D., ᏥᏄᏍᏗ witnessed ᎾᎥᎢ ᎯᎠ ᎥᏩᏘᏍᎬ ᎭᏫᎾᏗᏢ [[Pompeii]]. ᎦᏂᎸ ᎠᏱᎸᏓ ᎯᎠ ᎪᏪᎵ ᎠᏓᏁᏟᏴᏍᏗ ᎤᏟ ᎢᎦᎢ ᎠᎴ ᎤᏟ ᎢᎦᎢ ᎬᏔᏅᎯ; ᎯᎠ ᎢᎬᏱ ᎪᏪᎳᏅᎯ ᎧᏁᎢᏍᏙᏗ ᎯᎠ ᎪᏪᎵ ᏥᏄᏍᏗ ᎤᏙᏢᏒ ᎪᏪᎵ ᎨᏒᎢ ᏂᏛᎴᏅᏓ ᎯᎠ ᎤᎵᏍᏛ ᎯᎠ ᎢᎬᏱ ᏍqᎣᎯᏧᏈ ᏧᏕᏘᏴᏗ ᎾᎥᎢ [[Martial|ᏓᏄᏬ ᎢᏳᏍᏗ]] ᎭᏫᎾᏗᏢ ᎤᏤᎵ Apophoreta CLXXXIV, ᎭᏢᏃ ᎾᏍᎩ ᎠᏍᎦᏯ ᎦᎸᏉᏙᏗ Ꮝ ᎠᎦᏲᎳᏗᏍᏗ. ᎭᏫᎾᏗᏢ ᎯᎠ ᎦᎵᏓᏍᏛ Hellenistic ᎡᎶᎯ ᏱᏂᎬᏛᎾ, ᎯᎠ ᎪᏪᎵ ᎥᏝ ᎤᏁᏉᏤᎸ ᎤᏣᏘ ᎤᎾᏤᎵᏛ ᎠᎴ ᎾᏍᎩ ᎤᏩᏒ ᎭᏫᏂᏗᏢ ᎯᎠ ᏧᎾᏁᎸᏗ ᎾᎥ ᏄᎾᏓᎸ ᏥᏄᏍᏛᎩ ᎾᏍᎩ ᎦᏬᏂᏍᎬ ᎠᎴ ᎤᏁᏉᏤᎸ ᏂᎬᎢ ᎬᏙᏗ. ᎯᎠ ᎠᏓᏅᏖᏗ ᎪᏪᎵ ᎨᏒᎢ ᏄᏓᎷᎸᎾ influenced ᎾᎥᎢ ᎯᎠ ᎦᎶᎯᏍᏗ ᎯᎸᏍᎩ [[wax tablet|ᎠᏜ ᏗᎪᏪᎶᏗ ᎪᏪᎵ]] ᎨᏒᎩ ᎤᎾᏖᎳᏛᎩ ᎢᏧᎳ, ᏥᏄᏍᏗ ᎾᏛᏁ ᎯᎠ ᎧᏁᏨ ᎯᎠ ᎧᏁᏨ ᎪᏪᎵ (ᏍᏆᎳ ᎠᏍᏆᎵᏛ ᎠᏓ) ᎧᏁᎢᏍᏙᏗ. ᎾᎾᎢ ᎢᎬᏱ ᎬᏔᏅᎯ ᎠᎬᏫᏳᏛ ᎾᏍᎩᎾᎢ ᎢᎦ ᏄᎵᏍᏔᏅᏒ, ᎯᎠ ᎪᏪᎵ ᎢᏧᎳ ᎬᏙᏗ ᎯᎠ ᏚᏙᎳᏩᏛᎲ [[parchment|ᎠᏃᏪᎵᏍᎬ]] ᎷᏍᎦᏃᎵ phased ᎠᏥᏄqᎣᏫᏍᎬ ᎠᏃᏪᎵᏍᎬ ᎪᏪᎸ ᎾᎯᏳᎨᏒ ᎯᎠ ᏦᎢᏁ ᏍᏉᎯᏧᏈ ᏧᏕᏘᏴᏗ .D.. ᎪᎯ ᏄᎵᏍᏔᏅᎩ ᎦᏳᎳ ᎭᏫᎾᏗᏢ ᎯᎠ ᏧᎾᏁᎸᏗ ᏄᏍᏗᏓᏅ ᎠᎴ ᎯᎠ ᎠᎾᏓᏅᏖᏍᎬ ᎾᏍᎩᎾᎢ ᎠᏠᏯᏍᏙᏗ ᎯᎠ ᎪᏪᎵ ᎤᏙᏢᏒ ᎯᎠ ᎪᏪᎵ ᎠᎴ ᎯᎸᏍᎩ: ᎯᎠ ᎪᏪᎵ format ᎨᏒᎢ ᎤᏟ ᎢᎦᎢ ᎠᎳᏏᎾᎯᏍᏗ ᏥᏄᏍᏗ ᎢᏧᎳ ᏗᏍᏆᎨᏂ ᎯᎠ ᎠᏃᏪᎵᏍᎬ ᏭᏚᎸᏛ ᎬᏙᏗ ᏰᎵᏇ ᎾᏍᏋ ᎬᏔᏅᎯ, ᎾᏍᎩ ᎨᏒᎢ ᏩᎾᎯᎨᏍᏙᏗ ᎠᏰᎵ, ᎢᎦᎢ ᎠᎴ searchable. ᎾᏍᎩ ᎨᏒᎢ ᎾᏍᎩ ᎾᏍᏇ ᏰᎵᏊ Ꮎ ᎯᎠ ᏧᎾᏁᎸᏗ ᎪᏪᎵ ᏗᏃᏪᎵᏍᎩ ᎠᏥᎸᏉᏗ ᎤᎾᏤᎵ ᎠᏃᏪᎵᏍᎬ ᎾᎿ ᎤᏰᎸᏛᎢ ᏂᏛᎴᏅᏓ ᎯᎠ ᎦᎵᏓᏍᏛ ᏓᎵᏍᏛ ᎦᏙ ᎤᏍᏗ ᎨᏒᎩ ᎪᏪᎳᏅᎯ ᏄᎶᏒᏍᏛᎾ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᏙᏢᏒ ᎪᏪᎸ.
 
 === ᎠᏰᎵ ᎤᎧᏁᎳ ===
 ==== ᎠᏃᏪᎵᏍᎬ ====
@@ -55,10 +55,10 @@
 ᎾᏍᎩ ᏥᏄᏍᏛᎩ ᎾᏍᎩ ᏂᎨᏒᎾ iyuwakodi [[Johann Gutenberg]] ᎦᏬᏂᏍᎬ ᎯᎠ [[printing press|ᎦᎴᏴᏗᏍᎬᎢ ᏗᏂᎴᏱᏗᏍᎩ]] ᎬᏙᏗ ᎠᎾᎦᎵᏍᎩ ᎦᏂᏱᏍᎩ [[movable type|ᎠᏌᎳᏙᏗ ᏗᎦᎪᏗ]] ᎭᏫᎾᏗᏢ ᎯᎠ 15th ᏍqᎣᎯᏧᏈ tsudetiyvdi Ꮎ ᏗᎪᏪᎵ ᎤᏂᎩᏍᏔᏅ ᎾᏍᏋ ᎤᏠᏯᎨᏍᏙᏗ affordable (ᎾᏍᎩ ᎤᏁᎳᎩ ᏙᎢ ᎾᎥᏂᎨᏍᏙᏗ ᎤᎪᏗ ᏗᎵᎬᏩᎸᏍᎩ ᎾᏍᎩᎾᎢ ᎤᎪᏗᏗ ᏴᏫ) ᎠᎴ ᎤᏟ ᎢᎦᎢ ᏂᎬᎢ ᏰᎵ ᎠᏩᏛᏗ. ''ᎠᏓᏚᎬ ᎪᏪᎵ: [[Chwe Yun-ui]] ᎦᎾᎬᎢ ᎯᎠ ᎡᎶᎯ ᎤᏤᎵ ᎢᎬᏱ ᎠᎾᎦᎵᏍᎩ ᎦᏂᏱᏍᎩ ᎠᏌᎳᏙᏗ ᏗᎦᎪᏗ ᎦᎴᏴᏗᏍᎬᎢ ᎭᏫᎾᏗᏢ [[1234]]ᏂᏓᏙᎳᎬᎾ ᎾᎯᏳᎨᏒ [[Goryo Dynasty|Goryo ᏓᎳᏏᏛ]] ᎭᏫᎾᏗᏢ [[Korea]].'' ᎪᎯ ᏧᎷᏆᏗᏅᏗ ᎯᎠ ''ᏄᏍᏗᏓᏅ ᎥᏓᏓᎫᏴᎡᏗᏱ'', ᏓᏓᏘᏂᏒ ᏄᏂᏪᏒ ᏯᏛᎿ ᏥᏄᏍᏗ "ᎯᎠ ᎦᎴᏴᏗᏍᎬᎢ ᏗᏂᎴᏱᏗᏍᎩ ᏫᎵ ᎠᎵᏍᎪᎸᏙᏗ ᏗᎪᏪᎵ ᎠᎩᏍᏗᏱ ᎾᎾᎯ ᎯᎠ ᏧᏃᏰᏂ ᏴᏫ ᎦᎪ ᎤᎭ Ꮭ ᏗᎦᎸᏫᏍᏓᏁᏗ ᏓᎪᎵᏰᏍᎬ ᏗᎪᏪᎵ." <!-- need source for quote --> ᎾᏍᎩ ᎨᏒᎢ ᎠᎦᏎᏍᏔᏅ Ꮎ ᎭᏫᎾᏗᏢ Europe ᎬᏩᏚᏫᏛ 1,000 ᏧᏓᎴᏅᏓ ᏗᎪᏪᎵ ᎨᏒᎩ ᎪᏢᏅᎯ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᏑᏕᏘᏴᏓ ᎤᏓᎷᎸ ᎯᎠ ᏚᏙᎳᏩᏛᎲ ᎯᎠ ᎦᎴᏴᏗᏍᎬᎢ ᏗᏂᎴᏱᏗᏍᎩ.
 
 ==== Ꭺ ====
-ᎤᏁᎳᎩ ᎾᏍᎩ ᎾᏍᏊ [[paper|Ꭺ]]ᎠᏃᏢᏍᎬ ᎭᏫᎾᏗᏢ Europe ᎤᎴᏅᎲ ᏴᏩtᎤᏫᏛ 11th ᏍqᎣᎯᏧᏈ ᏧᏕᏘᏴᏗ, ᎦᎸᎳᏗᏢ ᎢᏳᏩᎪᏗ ᎯᎠ ᎠᏓᎴᏂᏍᎬ 16th ᏍqᎣᎯᏧᏈ ᏧᏕᏘᏴᏗ ᎠᏃᏪᎵᏍᎬ ᎠᎴ Ꭺ ᎨᏒᎩ ᎠᏛᎯᏍᏔᏅ congruent ᏌᏊ ᏄᏓᎴ, ᎠᏃᏪᎵᏍᎬ ᎠᎴᏂᏙᎲ ᎯᎠ ᎤᏟ ᎢᎦᎢ ᎤᎪᏗ ᏗᎵᎬᏩᎸᏍᎩ ᎠᎴ ᏗᏙᎳᎩ ᏗᏓᏁᏤᏗ. ᏗᎦᎴᏴᏗᏍᎩ ᎠᎴ ᏗᎦᎴᏴᏗᏍᎩ ᏯᏓᎢᏗᏏ ᎢᏳᏓᎵᎭ ᎢᏳᏍᏗ ᎧᏃᎮᏗ ᎯᎠ ᎤᏠᏱ ᏕᎦᏃᏣᎸ ᎾᎿ ᎢᏧᎳ ᏭᏚᎸᏛ ᏗᎬᏙᏗ, ᎠᎵᏍᏕᎸᏙᏗ ᎤᏟ ᎢᎦᎢ ᎬᎾᏬᏍᎬ ᏌᏊ ᎤᏂᎾᏗᏅᏗ. ᏥᏄᏍᏗ ᎾᎥᏂᎨᏍᏙᏗ ᎤᎪᏗᏗ lyudetiyvda ᏗᏁᏝᎾ, ᎯᎠ Ꭺ ᏥᏄᏍᏛᎩ ᎢᎬᏱ ᎪᏢᏅᎯ ᎭᏫᎾᏗᏢ ᎠᎦᎾᏫᏗᏍᎩ, ᏥᏄᏍᏗ ᎢᎬᏱ ᏥᏄᏍᏗ 200 B.C., ᎠᎴ ᏭᎷᏨᎩ Europe ᏗᎬᏩᎶᏒ [[History of Islam|muslim]] territories. ᎾᎾᎢ ᎢᎬᏱ ᎪᏢᏅᎯ ᎫᏢᎥᏍᎬ, ᎯᎠ [[industrial revolution|ᏧᏂᎸᏫᏍᏓᏁᏗ ᎠᏕᏲᎲ]] ᎦᏁᏟᏴᏓ Ꭺ-ᎠᏃᏢᏍᎬ ᎠᎵᏏᎾᎯᏍᏙᏗ, ᎠᎵᏍᎪᎸᏙᏗ ᎾᏍᎩᎾᎢ Ꭺ ᎾᏍᏋ ᎪᏢᏅᎯ ᎠᏥᏄqᎣᏫᏍᎬ ᎠᏓ ᏄᏍᏛ ᎠᎩᏍᏗ.
+ᎤᏁᎳᎩ ᎾᏍᎩ ᎾᏍᏊ [[paper|ᎪᏪᎵ]] ᎠᏃᏢᏍᎬ ᎭᏫᎾᏗᏢ [[Europe|ᏳᎳᏛ]] ᎤᎴᏅᎲ ᏴᏩtᎤᏫᏛ 11th ᏍqᎣᎯᏧᏈ ᏧᏕᏘᏴᏗ, ᎦᎸᎳᏗᏢ ᎢᏳᏩᎪᏗ ᎯᎠ ᎠᏓᎴᏂᏍᎬ 16th ᏍqᎣᎯᏧᏈ ᏧᏕᏘᏴᏗ ᎠᏃᏪᎵᏍᎬ ᎠᎴ Ꭺ ᎨᏒᎩ ᎠᏛᎯᏍᏔᏅ congruent ᏌᏊ ᏄᏓᎴ, ᎠᏃᏪᎵᏍᎬ ᎠᎴᏂᏙᎲ ᎯᎠ ᎤᏟ ᎢᎦᎢ ᎤᎪᏗ ᏗᎵᎬᏩᎸᏍᎩ ᎠᎴ ᏗᏙᎳᎩ ᏗᏓᏁᏤᏗ. ᏗᎦᎴᏴᏗᏍᎩ ᎠᎴ ᏗᎦᎴᏴᏗᏍᎩ ᏯᏓᎢᏗᏏ ᎢᏳᏓᎵᎭ ᎢᏳᏍᏗ ᎧᏃᎮᏗ ᎯᎠ ᎤᏠᏱ ᏕᎦᏃᏣᎸ ᎾᎿ ᎢᏧᎳ ᏭᏚᎸᏛ ᏗᎬᏙᏗ, ᎠᎵᏍᏕᎸᏙᏗ ᎤᏟ ᎢᎦᎢ ᎬᎾᏬᏍᎬ ᏌᏊ ᎤᏂᎾᏗᏅᏗ. ᏥᏄᏍᏗ ᎾᎥᏂᎨᏍᏙᏗ ᎤᎪᏗᏗ lyudetiyvda ᏗᏁᏝᎾ, ᎯᎠ Ꭺ ᏥᏄᏍᏛᎩ ᎢᎬᏱ ᎪᏢᏅᎯ ᎭᏫᎾᏗᏢ ᎠᎦᎾᏫᏗᏍᎩ, ᏥᏄᏍᏗ ᎢᎬᏱ ᏥᏄᏍᏗ 200 B.C., ᎠᎴ ᏭᎷᏨᎩ Europe ᏗᎬᏩᎶᏒ [[History of Islam|muslim]] territories. ᎾᎾᎢ ᎢᎬᏱ ᎪᏢᏅᎯ ᎫᏢᎥᏍᎬ, ᎯᎠ [[industrial revolution|ᏧᏂᎸᏫᏍᏓᏁᏗ ᎠᏕᏲᎲ]] ᎦᏁᏟᏴᏓ Ꭺ-ᎠᏃᏢᏍᎬ ᎠᎵᏏᎾᎯᏍᏙᏗ, ᎠᎵᏍᎪᎸᏙᏗ ᎾᏍᎩᎾᎢ Ꭺ ᎾᏍᏋ ᎪᏢᏅᎯ ᎠᏥᏄqᎣᏫᏍᎬ ᎠᏓ ᏄᏍᏛ ᎠᎩᏍᏗ.
 
 === ᎪᎯᏊ ᎢᏴ ᏥᎩ ᎡᎶᎯ ===
-ᎬᏙᏗ ᎯᎠ ᎤᎵᏌᎳᏙᏗ ᎦᎴᏴᏗᏍᎬᎢ ᎭᏫᎾᏗᏢ ᎯᎠ ᏍᎩᎦᏚᏏᏁ ᏍqᎣᎯᏧᏈ ᏧᏕᏘᏴᏗ, ᏗᎪᏪᎵ ᎨᏒᎩ ᎦᎴᏴᏔᏅᎯ ᎭᏫᎾᏗᏢ ᏩᏎᎸᎯ ᏗᏎᏍᏗ ᎠᎴ ᎨᏒᎩ ᎾᎥᏂᎨᏍᏙᏗ ᏧᎬᏩᎶᏗᏯ. ᎯᎠ ᎤᏚᎳᏗ ᎠᏓᏍᏕᎸᏗ ᎾᏍᎩ ᎯᎠ ᎦᎸᏉᏗ commodities ᏥᏄᏍᏛᎩ ᎥᏝ ᏳᏓᎷᎳ. ᏌᏊ ᎯᎠ ᎢᎬᏱᏗᏢᏍᏗ ᏫᏓᏎᎸᎢ ᎯᎠ ᎬᏙᏗ [[bookmark]]ᏥᏄᏍᏛᎩ ᎭᏫᎾᏗᏢ 1584 ᎯᎳᎪ ᎢᏳ ᎯᎠ ᎤᎬᏫᏳ ᎠᏂᏁᎳ ᎤᏤᎵ ᏗᎦᎴᏴᏗᏍᎩ, Christopher Barker, ᎤᏓᏁᎸᎩ [[Queen Elizabeth I|ᎤᎬᏫᏳ ᎠᏂᏁᎳ Elizabeth ᎠᏯ]] ᎬᏙᏗ ᎦᏅᏙᎬ ᏏᎵᎩ bookmark. ᏧᏣᏔᏊ bookmarks ᎭᏫᎾᏗᏢ ᎯᎠ ᏁᎳᏚᏏᏁ ᎠᎴ nineteenth centuries ᎨᏒᎩ ᎠᏯᏙᎵ ᏏᎵᎩ ᏗᏓᏍᏚᏗ ᏩᎦᏛ ᎾᎾᎯ ᎯᎠ ᎪᏪᎵ ᎾᎾᎢ ᎯᎠ ᎦᏚᎢ ᎯᎠ ᎪᏍᏓᏱ ᎠᎴ ᎧᏁᏉᏛ ᎡᎳᏗᏢ ᎯᎠ ᎡᎳᏗᎨ ᎠᏍᏛᎢ ᎯᎠ ᎤᏆᏓᏛ. ᎯᎠ ᎢᎬᏱ detachable bookmarks ᎤᎴᏅᎲ ᎦᎾᏄᎪᎬᎢ ᎭᏫᎾᏗᏢ ᎯᎠ [[1850]] ᎤᏤᎵ ᎠᎴ ᎨᏒᎩ ᎪᏢᏅᎯ ᏂᏛᎴᏅᏓ ᏏᎵᎩ ᎠᎴ ᏧᏓᎴᏅᏓ ᏗᎧᏃᏗ ᎤᏔᏂᏗ ᎦᏙᎯ. ᎾᏍᎩ ᏂᎨᏒᎾ ᎢᏳᏩᎪᏗ ᎯᎠ [[1880]]', ᏄᏛᏁᎸ Ꭺ ᎠᎴ ᏐᎢ ᏭᏚᎸᏛ ᏗᎬᏙᏗ ᏗᏙᎳᎩ ᎤᏟ ᎢᎦᎢ ᏧᏣᏔᏊ.
+ᎬᏙᏗ ᎯᎠ ᎤᎵᏌᎳᏙᏗ ᎦᎴᏴᏗᏍᎬᎢ ᎭᏫᎾᏗᏢ ᎯᎠ ᏍᎩᎦᏚᏏᏁ ᏍqᎣᎯᏧᏈ ᏧᏕᏘᏴᏗ, ᏗᎪᏪᎵ ᎨᏒᎩ ᎦᎴᏴᏔᏅᎯ ᎭᏫᎾᏗᏢ ᏩᏎᎸᎯ ᏗᏎᏍᏗ ᎠᎴ ᎨᏒᎩ ᎾᎥᏂᎨᏍᏙᏗ ᏧᎬᏩᎶᏗᏯ. ᎯᎠ ᎤᏚᎳᏗ ᎠᏓᏍᏕᎸᏗ ᎾᏍᎩ ᎯᎠ ᎦᎸᏉᏗ commodities ᏥᏄᏍᏛᎩ ᎥᏝ ᏳᏓᎷᎳ. ᏌᏊ ᎯᎠ ᎢᎬᏱᏗᏢᏍᏗ ᏫᏓᏎᎸᎢ ᎯᎠ ᎬᏙᏗ [[bookmark]] ᏥᏄᏍᏛᎩ ᎭᏫᎾᏗᏢ 1584 ᎯᎳᎪ ᎢᏳ ᎯᎠ ᎤᎬᏫᏳ ᎠᏂᏁᎳ ᎤᏤᎵ ᏗᎦᎴᏴᏗᏍᎩ, Christopher Barker, ᎤᏓᏁᎸᎩ [[Queen Elizabeth I|ᎤᎬᏫᏳ ᎠᏂᏁᎳ Elizabeth ᎠᏯ]] ᎬᏙᏗ ᎦᏅᏙᎬ ᏏᎵᎩ bookmark. ᏧᏣᏔᏊ bookmarks ᎭᏫᎾᏗᏢ ᎯᎠ ᏁᎳᏚᏏᏁ ᎠᎴ nineteenth centuries ᎨᏒᎩ ᎠᏯᏙᎵ ᏏᎵᎩ ᏗᏓᏍᏚᏗ ᏩᎦᏛ ᎾᎾᎯ ᎯᎠ ᎪᏪᎵ ᎾᎾᎢ ᎯᎠ ᎦᏚᎢ ᎯᎠ ᎪᏍᏓᏱ ᎠᎴ ᎧᏁᏉᏛ ᎡᎳᏗᏢ ᎯᎠ ᎡᎳᏗᎨ ᎠᏍᏛᎢ ᎯᎠ ᎤᏆᏓᏛ. ᎯᎠ ᎢᎬᏱ detachable bookmarks ᎤᎴᏅᎲ ᎦᎾᏄᎪᎬᎢ ᎭᏫᎾᏗᏢ ᎯᎠ [[1850]] ᎤᏤᎵ ᎠᎴ ᎨᏒᎩ ᎪᏢᏅᎯ ᏂᏛᎴᏅᏓ ᏏᎵᎩ ᎠᎴ ᏧᏓᎴᏅᏓ ᏗᎧᏃᏗ ᎤᏔᏂᏗ ᎦᏙᎯ. ᎾᏍᎩ ᏂᎨᏒᎾ ᎢᏳᏩᎪᏗ ᎯᎠ [[1880]]', ᏄᏛᏁᎸ Ꭺ ᎠᎴ ᏐᎢ ᏭᏚᎸᏛ ᏗᎬᏙᏗ ᏗᏙᎳᎩ ᎤᏟ ᎢᎦᎢ ᏧᏣᏔᏊ.
 
 ᎠᏥᎸ ᎦᏌᏙᏯᏍᎩ-powered ᎦᎴᏴᏗᏍᎬᎢ presses ᎠᏓᏁᏟᏴᏍᏗ ᎤᏂᎸᏉᏗ ᎭᏫᎾᏗᏢ ᎯᎠ ᎢᎬᏱ 1800s. ᎾᏍᎩ ᎯᎠ ᏗᎬᏔᏂᏓᏍᏗ ᏰᎵᏇ ᎦᎴᏯᏛ 1,100 ᏗᎬᎯᏓ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᏑᏟᎶᏛ, ᎠᎴ ᏧᎸᏫᏍᏓᏁᎯ ᏰᎵᏇ ᎾᏍᎩ ᎤᏩᏒ ᎠᏫᏒᏗ 2,000 ᎪᏪᎵ ᏂᏙᏓᎦᏅᏅᎯ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᏑᏟᎶᏛ. 
 
@@ -92,18 +92,18 @@
 
 ᎯᎠ ᎠᏓᏁᏟᏴᏍᎬ [[paperback]] ᏗᎪᏪᎵ ᎭᏫᎾᏗᏢ ᎯᎠ [[20th century|20th ᏍqᎣᎯᏧᏈ ᏧᏕᏘᏴᏗ]] ᎤᏗᏅᏒᎩ ᎠᏕᏲᎲ ᎤᏂᎸᏉᏗ ᏓᏂᎴᏴᏗᏍᎩ. Paperback ᏗᎪᏪᎵ ᎪᏢᏅᎯ ᎣᏤᎵ ᏗᎪᏪᎵ affordable ᎾᏍᎩᎾᎢ ᎤᎪᏗᏗ ᏴᏫ. Paperback ᏗᎪᏪᎵ ᎢᏳᏓᎵᎭ ᎠᏠᏯᏍᏔᏅ ᏧᏂᎸᏫᏍᏓᏁᏗ ᏂᏛᎴᏅᏓ ᎠᏂᎶᏁᏍᎬ Ꮎ ᎠᏰᎲ ᏧᏩᎫᏔᏅᏒ ᏭᏪᏙᎢ ᎦᎴᏴᏔᏅᎯ ᎾᏍᎩ ᎤᎪᏗᏗ ᎭᏫᎾᏗᏢ [[pulp magazines|ᏄᏍᏛ ᎠᎩᏍᏗ ᏗᎪᏪᎵ ᏗᎪᎵᏰᏗ]]. ᏥᏄᏍᏗ ᏄᎵᏍᏔᏅ ᎯᎠ ᎡᎳᏗ ᏓᎬᏩᎶᏛ ᏯᏛᎿ ᏗᎪᏪᎵ ᎠᎴ ᎯᎠ ᎠᏰᏍᏛᏗ ᎪᏪᎵ ᎠᎧᎵᎸᎯ ᎬᏙᏗ ᎠᏂ (ᎭᏫᎾᏗᏢ ᎦᏟᏐᏗᎩ ᎯᎠ ᏗᏁᏝᎾ ᎠᏂᎦᏲᎵ ᎤᏂᎾᏗᏅᏗ ᏭᎶᏒᏍᏔᏅ ᎤᏍᏗ ᏧᎬᏩᎶᏗ ᎬᏔᏅᎯ paperbacks) ᎣᏤᎵ ᎤᏤᎵᏓ ᎪᏪᎵ ᏕᎦᏅ ᏗᎪᎵᏰᏗ ᎤᏑᎳᎪᏨ ᎾᏍᏋ ᏄᏍᏗᏓᏅ ᏗᎬᏟᎶᏍᏙᏗ ᎾᏍᎩᎾᎢ ᎯᎠ ᎤᏪᎾᎢ.
 
-ᎾᎯᏳᎢ ᎤᏍᏗ ᎤᏓᏂᏝᏅ ᏗᎪᏪᎵ, ᎠᎴ ᏌᏊ ᎾᏍᏋ ᎬᏔᏅᎯ ᎾᎥᎢ ᎤᏍᏗ ᏎᏍᏗ ᏴᏫ, ᏰᎵᏇ ᎾᏍᏋ ᎠᏓᎾᏅ ᎭᏫᎾᏗᏢ ᏂᎦᎵᏍᏗᏍᎬᎫ ᎦᎶᎯᏍᏗ ᎠᎯᏗᎨ ᎨᏒ ᎯᎠ ᎤᎾᏤᎵᎢ, ᎠᏠᏯᏍᏗᏍᎩ ᏰᎵᏊ ᏗᏙᎳᎩ [[bookcase|ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ]], ᎡᏆ ᎠᎴ ᏴᏫ ᎤᏁᏓᏍᏗ ᎤᏓᏂᏝᏅ ᎧᏁᎦ ᎢᏯᏛᏁᏗ [[catalogue|ᎪᎱᏍᏗ ᎠᏓᏅᏍᏙᏗ]] ᎠᎴ ᎢᎦᏛ ᎤᏅᏔᏂᏓᏍᏗ ᎠᏓᎵᏃᎮᏗ ᎾᏍᎩ. ᎢᏳᏓᎵᎭ ᎠᏍᏓᏩᏛᏍᏙᏗ ᎠᎴ ᏐᎢ ᏚᏙᏪᎸᎢ ᎤᎭ ᎾᏍᏋ ᎦᏟᏌᏅᎯ ᎯᎠ ᏗᎪᏪᎵ ᎦᏣᏄᎳ ᎯᎠ ᏧᎵᎬᏩᎳᏅᎯ ᎦᏃᏢᎩ ᎠᏂ ᎯᎠ ᎪᎱᏍᏗ ᎠᏓᏅᏍᏙᏗ ᎠᎴ ᎤᎾᏤᎵ ᎪᏢᎯᏐᏗ ᎠᏯᏔᎾᎵ ᎾᎿ ᎦᏙᎬ. ᎭᏢᏃ ᎾᏍᎩ ᎯᎠ ᎠᏓᏙᎯᏙᏗ ᎦᏟᏌᏅ ᎪᏪᎵ ᏧᏓᎴᎿᎢ, ᎤᏅᏌ ᎠᎴ ᏩᏎᎸᎯ ᏥᏄᏍᏗ "ᎤᏯᏅᏛ ᏗᏎᏍᏗ". ᎭᏫᎾᏗᏢ ᎡᏆ libraries ᎪᎯ ᎤᏯᏅᏛ ᏎᏍᏗ ᎨᏒᎢ ᎤᏠᏱᎭ ᏚᎳᏏᏔᏅᎩ ᎾᎿ [[Library classification|ᎪᏪᎵ ᏕᎦᏅ ᏗᎪᎵᏰᏗ ᏗᏓᎴᎾᏔᏅ ᏗᎦᏘᏌᏅᎩ]] ᎢᏯhᏛᏁᎵᏓᏍᏗ. ᎯᎠ ᎤᏯᏅᏛ ᏎᏍᏗ ᎨᏒᎢ ᎾᏀᏭᏅᎩ ᎭᏫᎾᏗᏢ ᎯᎠ ᎪᏪᎵ ᎠᎴ ᎾᎿ ᎯᎠ ᎪᏍᏓᏱ ᎯᎠ ᎪᏪᎵ, ᏄᎶᏒᏍᏛᎾ ᏍᏆᎳᎢ ᎾᎿ ᎢᏴᎢ ᎤᏓᎷᎸ ᎯᎠ ᎭᏫᏂ, ᎭᏫᎾᏗᏢ ᏗᏙᎳᎩ ᎬᏙᏗ institutional ᎠᎴ ᎬᎾᏕᎾ ᏰᎵᏊ ᏗᏙᎳᎩ ᏯᏛᎿ ᏥᏄᏍᏗ [[ANSI]]/[[NISO]] Z39.41 - 1997. ᎪᎯ ᏍᏆᎳᎢ (7 ᏚᏆᏓᏛ) ᏰᎵᏊ ᏗᏙᎳᎩ ᎾᏍᎩ ᎾᏍᏇ establishes ᎯᎠ ᎪᏢᎯᏐᏗ ᎦᎶᎯᏍᏗ ᎾᎿᎢ ᎠᏓᏃᎯᏎᏗ (ᏯᏛᎿ ᏥᏄᏍᏗ ᎯᎠ ᎦᏓ ᎦᏂᏴᏙ ᎠᎴ ᎯᎠ ᏚᏙᎥ ᎯᎠ ᎪᏪᎵ ᎪᎪᏪᎵ ᎪwᎵᏍᎩ) ᎾᎿ ᎪᏪᎵ ᎪᏍᏓᏱ ᎠᎴ ᎾᎿ "shelvable" ᎪᏪᎵ-ᎾᏍᎩᏯᎢ ᏓᎦᏘᎴᎦ ᏯᏛᎿ ᏥᏄᏍᏗ ᎠᏟᏍᏙᏗ ᎾᏍᎩᎾᎢ [[DVD]], [[video tape|video ᎠᏍᏓᏅᏅ]]ᎠᎴ [[Computer software|software]].
+ᎾᎯᏳᎢ ᎤᏍᏗ ᎤᏓᏂᏝᏅ ᏗᎪᏪᎵ, ᎠᎴ ᏌᏊ ᎾᏍᏋ ᎬᏔᏅᎯ ᎾᎥᎢ ᎤᏍᏗ ᏎᏍᏗ ᏴᏫ, ᏰᎵᏇ ᎾᏍᏋ ᎠᏓᎾᏅ ᎭᏫᎾᏗᏢ ᏂᎦᎵᏍᏗᏍᎬᎫ ᎦᎶᎯᏍᏗ ᎠᎯᏗᎨ ᎨᏒ ᎯᎠ ᎤᎾᏤᎵᎢ, ᎠᏠᏯᏍᏗᏍᎩ ᏰᎵᏊ ᏗᏙᎳᎩ [[bookcase|ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ]], ᎡᏆ ᎠᎴ ᏴᏫ ᎤᏁᏓᏍᏗ ᎤᏓᏂᏝᏅ ᎧᏁᎦ ᎢᏯᏛᏁᏗ [[catalogue|ᎪᎱᏍᏗ ᎠᏓᏅᏍᏙᏗ]] ᎠᎴ ᎢᎦᏛ ᎤᏅᏔᏂᏓᏍᏗ ᎠᏓᎵᏃᎮᏗ ᎾᏍᎩ. ᎢᏳᏓᎵᎭ ᎠᏍᏓᏩᏛᏍᏙᏗ ᎠᎴ ᏐᎢ ᏚᏙᏪᎸᎢ ᎤᎭ ᎾᏍᏋ ᎦᏟᏌᏅᎯ ᎯᎠ ᏗᎪᏪᎵ ᎦᏣᏄᎳ ᎯᎠ ᏧᎵᎬᏩᎳᏅᎯ ᎦᏃᏢᎩ ᎠᏂ ᎯᎠ ᎪᎱᏍᏗ ᎠᏓᏅᏍᏙᏗ ᎠᎴ ᎤᎾᏤᎵ ᎪᏢᎯᏐᏗ ᎠᏯᏔᎾᎵ ᎾᎿ ᎦᏙᎬ. ᎭᏢᏃ ᎾᏍᎩ ᎯᎠ ᎠᏓᏙᎯᏙᏗ ᎦᏟᏌᏅ ᎪᏪᎵ ᏧᏓᎴᎿᎢ, ᎤᏅᏌ ᎠᎴ ᏩᏎᎸᎯ ᏥᏄᏍᏗ "ᎤᏯᏅᏛ ᏗᏎᏍᏗ". ᎭᏫᎾᏗᏢ ᎡᏆ libraries ᎪᎯ ᎤᏯᏅᏛ ᏎᏍᏗ ᎨᏒᎢ ᎤᏠᏱᎭ ᏚᎳᏏᏔᏅᎩ ᎾᎿ [[Library classification|ᎪᏪᎵ ᏕᎦᏅ ᏗᎪᎵᏰᏗ ᏗᏓᎴᎾᏔᏅ ᏗᎦᏘᏌᏅᎩ]] ᎢᏯhᏛᏁᎵᏓᏍᏗ. ᎯᎠ ᎤᏯᏅᏛ ᏎᏍᏗ ᎨᏒᎢ ᎾᏀᏭᏅᎩ ᎭᏫᎾᏗᏢ ᎯᎠ ᎪᏪᎵ ᎠᎴ ᎾᎿ ᎯᎠ ᎪᏍᏓᏱ ᎯᎠ ᎪᏪᎵ, ᏄᎶᏒᏍᏛᎾ ᏍᏆᎳᎢ ᎾᎿ ᎢᏴᎢ ᎤᏓᎷᎸ ᎯᎠ ᎭᏫᏂ, ᎭᏫᎾᏗᏢ ᏗᏙᎳᎩ ᎬᏙᏗ institutional ᎠᎴ ᎬᎾᏕᎾ ᏰᎵᏊ ᏗᏙᎳᎩ ᏯᏛᎿ ᏥᏄᏍᏗ [[ANSI]]/[[NISO]] Z39.41 - 1997. ᎪᎯ ᏍᏆᎳᎢ (7 ᏚᏆᏓᏛ) ᏰᎵᏊ ᏗᏙᎳᎩ ᎾᏍᎩ ᎾᏍᏇ establishes ᎯᎠ ᎪᏢᎯᏐᏗ ᎦᎶᎯᏍᏗ ᎾᎿᎢ ᎠᏓᏃᎯᏎᏗ (ᏯᏛᎿ ᏥᏄᏍᏗ ᎯᎠ ᎦᏓ ᎦᏂᏴᏙ ᎠᎴ ᎯᎠ ᏚᏙᎥ ᎯᎠ ᎪᏪᎵ ᎪᎪᏪᎵ ᎪwᎵᏍᎩ) ᎾᎿ ᎪᏪᎵ ᎪᏍᏓᏱ ᎠᎴ ᎾᎿ "shelvable" ᎪᏪᎵ-ᎾᏍᎩᏯᎢ ᏓᎦᏘᎴᎦ ᏯᏛᎿ ᏥᏄᏍᏗ ᎠᏟᏍᏙᏗ ᎾᏍᎩᎾᎢ [[DVD]], [[video tape|video ᎠᏍᏓᏅᏅ]] ᎠᎴ [[Computer software|software]].
 
-ᎭᏫᎾᏗᏢ ᎪᏪᎵ ᏕᎦᏅ ᏗᎪᎵᏰᏗ ᎠᎴ ᎪᏪᎵ' ᎪᎱᏍᏗ ᎠᏓᏅᏍᏙᏗ, ᎾᏍᎩ ᎨᏒᎢ ᏧᏣᏔᏊ ᎠᏠᏯᏍᏛ ᎦᏟᏌᏅ ᎦᎴᏴᏔᏅ ᏯᏛᎿ ᏥᏄᏍᏗ "ᎠᎵᏍᏚᎶ 8vo" ᎠᏓᏎᎮᏗ ᎯᎠ [[paper size|Ꭺ ᏂᎬᎢ]] ᏂᏛᎴᏅᏓ ᎦᏙ ᎤᏍᏗ ᎯᎠ ᎪᏪᎵ ᎨᏒᎢ ᎪᏢᏅᎯ.
+ᎭᏫᎾᏗᏢ ᎪᏪᎵ ᏕᎦᏅ ᏗᎪᎵᏰᏗ ᎠᎴ ᎪᏪᎵ' ᎪᎱᏍᏗ ᎠᏓᏅᏍᏙᏗ, ᎾᏍᎩ ᎨᏒᎢ ᏧᏣᏔᏊ ᎠᏠᏯᏍᏛ ᎦᏟᏌᏅ ᎦᎴᏴᏔᏅ ᏯᏛᎿ ᏥᏄᏍᏗ "ᎠᎵᏍᏚᎶ 8vo" ᎠᏓᏎᎮᏗ ᎯᎠ [[paper size|ᎪᏪᎵ ᏂᎬᎢ]] ᏂᏛᎴᏅᏓ ᎦᏙ ᎤᏍᏗ ᎯᎠ ᎪᏪᎵ ᎨᏒᎢ ᎪᏢᏅᎯ.
 
-ᎯᎳᎪ ᎢᏳ ᏚᏓᏅ ᏗᎪᏪᎵ ᎠᎴ ᎠᏰᎦᎶᏛ ᎾᎿ bookshelf, [[bookend]]ᎠᎴ ᏱᏓᏟᎶᏍᏔᏅ ᎤᏚᎳᏗ ᏄᎵᏍᏔᏅ ᎠᏍᏆᏂᎪᏙᏗ ᎠᏂ ᏂᏛᎴᏅᏓ ᎫᎳᎦᎷ.
+ᎯᎳᎪ ᎢᏳ ᏚᏓᏅ ᏗᎪᏪᎵ ᎠᎴ ᎠᏰᎦᎶᏛ ᎾᎿ bookshelf, [[bookend]] ᎠᎴ ᏱᏓᏟᎶᏍᏔᏅ ᎤᏚᎳᏗ ᏄᎵᏍᏔᏅ ᎠᏍᏆᏂᎪᏙᏗ ᎠᏂ ᏂᏛᎴᏅᏓ ᎫᎳᎦᎷ.
 
 == ᎤᏍᏆᏂᎪᏛ ᎦᏅᏅᎢ ᏗᎪᏪᎵ ==
 ᏌᏊ ᎯᎠ ᎢᎬᏱᏗᏢᏍᏗ ᎠᎴ ᎤᎪᏗᏗ ᏂᎬᎢ ᎤᎾᏅᏛ ᎢᏯhᏛᏁᎵᏓᏍᏗ cataloguing ᏗᎪᏪᎵ ᎨᏒᎢ ᎯᎠ [[Dewey Decimal System|Dewey ᏎᏍᏗ ᎢᏯhᏛᏁᎵᏓᏍᏗ]]. ᎪᎯ ᎢᏯhᏛᏁᎵᏓᏍᏗ ᎤᎭ ᎤᎶᏒᎢ ᎠᏥᏄqᎣᏫᏍᎬ ᎬᏙᏗ ᎭᏫᎾᏗᏢ ᎢᎦᏛ ᏚᏙᏢᏒᎢ, ᎠᎬᏫᏳᏛ ᎢᎬᏂᏏᏍᎩ Eurocentric ᎤᏞᏴᏍᏗ ᎠᎴ ᏐᎢ ᎤᏦᎠᏎᏗ ᎾᏅᎾᏗᏍᎬᎢ ᎯᎠ ᎢᏯhᏛᏁᎵᏓᏍᏗ ᎪᎯᏊ ᎢᏴ ᏥᎩ libraries. ᏱᏂᎬᏛᎾ, ᎾᏍᎩ ᎨᏒᎢ ᏙᎢ ᎬᏔᏅᎯ ᎾᎥᎢ ᎤᎪᏗᏗ ᏴᏫ ᎤᏁᏓᏍᏗ libraries ᎭᏫᎾᏗᏢ ᎠᎺᎵᎨ. ᏄᏓᎴ ᎤᏂᎸᏉᏗ ᏗᏓᎴᎾᏔᏅ ᏗᎦᏘᏌᏅᎩ ᎢᏯhᏛᏁᎵᏓᏍᏗ ᎨᏒᎢ ᎯᎠ [[Library of Congress|ᎪᏪᎵ ᏕᎦᏅ ᏗᎪᎵᏰᏗ ᏩᏥᏂ ᏗᏂᎳᏫᎩ]] ᎢᏯhᏛᏁᎵᏓᏍᏗ, ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ ᎤᏟ ᎢᎦᎢ ᎤᏂᎸᏉᏗ ᎭᏫᎾᏗᏢ ᏗᏕᎶᏆᏍᏗ libraries. 
 
-ᎾᏍᎩᎾᎢ ᎯᎠ ᏂᎦᏛ 20th ᏍqᎣᎯᏧᏈ ᏧᏕᏘᏴᏗ ᎤᎪᏗᏗ [[librarian|ᎪᏪᎵ]]ᎡᎯᏍᏛ ᎬᏙᏗ ᎠᏍᎪᎳᏗᏍᎬ ᏗᏙᎳᎩ ᎪᏪᎵ ᏕᎦᏅ ᏗᎪᎵᏰᏗ ᎾᎾᏛᏁᎲ ᎯᎠ ᏴᏫ ᎤᏁᏓᏍᏗ (ᎠᎴ ᎠᏂᎦᏲᎵ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᏯᏛᎿ ᏥᏄᏍᏗ ᏙᎾᏕ ᎶᏆᏍᎩ) ᎤᏓᏅᏖᏔᏅ ᎬᏩᏚᏫᏛ ᎤᏍᏆᏂᎪᏛ ᎦᏅᏅᎢ ᎯᎠ ᏗᎪᏪᎵ ᎠᎴᏂᏙᎲ ᎦᏟᏌᏅᎯ ᎾᏕᏘᏴᎯᏒ ᎯᎠ Gutenberg ᎤᏓᏂᏝᏅ. ᏗᎬᏩᎶᏒ global ᎤᎾᏙᏢᎯ ᎤᏯᏅᎲ ᎯᎠ [[International Federation of Library Associations and Institutions|ᎠᏰᎵ ᏚᎾᏙᏢᏒ ᏍᎦᏚᎩ ᏕᎨᏌᏗᏒ ᎪᏪᎵ ᏕᎦᏅ ᏗᎪᎵᏰᏗ ᎤᎾᎵᎪᏒ ᎠᎴ ᏓᎾᏕᏲᎲᏍᎬ]] ([[IFLA]]) ᎤᏅᏌ ᏄᎵᎶᎲᏍᎬᎾ ᎧᏁᏉᎥᎢ ᎤᏠᏱᎭ ᎪᎱᏍᏗ ᏗᎬᏔᏂᏓᏍᏗ ᏯᏛᎿ ᏥᏄᏍᏗ ᎯᎠ ᎠᏰᎵ ᏚᎾᏙᏢᏒ ᏰᎵᏊ ᏗᏙᎳᎩ ᎪᏪᎵ ᏄᏍᏛ ᏗᎧᏃᏗ ᎠᎴ [[ISBD]].
+ᎾᏍᎩᎾᎢ ᎯᎠ ᏂᎦᏛ 20th ᏍqᎣᎯᏧᏈ ᏧᏕᏘᏴᏗ ᎤᎪᏗᏗ [[librarian|ᎪᏪᎵ]] ᎡᎯᏍᏛ ᎬᏙᏗ ᎠᏍᎪᎳᏗᏍᎬ ᏗᏙᎳᎩ ᎪᏪᎵ ᏕᎦᏅ ᏗᎪᎵᏰᏗ ᎾᎾᏛᏁᎲ ᎯᎠ ᏴᏫ ᎤᏁᏓᏍᏗ (ᎠᎴ ᎠᏂᎦᏲᎵ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᏯᏛᎿ ᏥᏄᏍᏗ ᏙᎾᏕ ᎶᏆᏍᎩ) ᎤᏓᏅᏖᏔᏅ ᎬᏩᏚᏫᏛ ᎤᏍᏆᏂᎪᏛ ᎦᏅᏅᎢ ᎯᎠ ᏗᎪᏪᎵ ᎠᎴᏂᏙᎲ ᎦᏟᏌᏅᎯ ᎾᏕᏘᏴᎯᏒ ᎯᎠ Gutenberg ᎤᏓᏂᏝᏅ. ᏗᎬᏩᎶᏒ global ᎤᎾᏙᏢᎯ ᎤᏯᏅᎲ ᎯᎠ [[International Federation of Library Associations and Institutions|ᎠᏰᎵ ᏚᎾᏙᏢᏒ ᏍᎦᏚᎩ ᏕᎨᏌᏗᏒ ᎪᏪᎵ ᏕᎦᏅ ᏗᎪᎵᏰᏗ ᎤᎾᎵᎪᏒ ᎠᎴ ᏓᎾᏕᏲᎲᏍᎬ]] ([[IFLA]]) ᎤᏅᏌ ᏄᎵᎶᎲᏍᎬᎾ ᎧᏁᏉᎥᎢ ᎤᏠᏱᎭ ᎪᎱᏍᏗ ᏗᎬᏔᏂᏓᏍᏗ ᏯᏛᎿ ᏥᏄᏍᏗ ᎯᎠ ᎠᏰᎵ ᏚᎾᏙᏢᏒ ᏰᎵᏊ ᏗᏙᎳᎩ ᎪᏪᎵ ᏄᏍᏛ ᏗᎧᏃᏗ ᎠᎴ [[ISBD]].
 
-ᎾᏍᎩ ᏂᏗᎨᏒᎾ, ᎠᏂᏏᏴᏫᎭ ᎪᏪᎵ ᎨᏒᎢ ᏗᎪᎥᎯ ᎾᎥᎢ ᎠᏰᎵ ᏚᎾᏙᏢᏒ ᏰᎵᏊ ᏗᏙᎳᎩ ᎪᏪᎵ ᏎᏍᏗ, ᎠᎴ [[ISBN]], ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ ᏧᏓᎴᎿᎢ ᏂᎦᎥᎢ ᎦᏟᏌᏅ ᎦᎴᏴᏔᏅ ᏂᎦᎥᎢ ᎪᏪᎵ ᎠᏛᎯᏍᏔᏅ ᎾᎥᎢ participating ᏗᎦᎴᏴᏗᏍᎩ, ᎡᎶᎯ ᎠᏯᏖᎾ. ᎾᏍᎩ ᎨᏒᎢ ᎤᏓᏅᏖᎸ ᎾᎥᎢ ᎯᎠ <nowiki>ISBN</nowiki> ᎤᎾᏙᏢᎯ. ᎾᏍᎩ ᎤᎭ ᏅᎩ ᎢᎦᏛᎭ. ᎯᎠ ᎢᎬᏱ ᎢᎦᏛ ᎨᏒᎢ ᎯᎠ ᏙᏱᏗᏢ ᎦᏚᎲ ᎠᏍᏓᏩᏛᏍᏙᏗ, ᎯᎠ ᏔᎵᏁ ᎯᎠ [[publisher|ᏗᎦᎴᏴᏗᏍᎩ]] ᎠᏍᏓᏩᏛᏍᏙᏗ, ᎠᎴ ᎯᎠ ᏦᎢᏁ ᎯᎠ ᎦᏓ ᎦᏂᏴᏙ ᎠᏍᏓᏩᏛᏍᏙᏗ. ᎯᎠ ᎣᏂ ᎢᎦᏛ ᎨᏒᎢ checksum ᎠᎴ ᎠᏕᎸ ᏗᏎᎯᏍᏗ ᏎᏍᏗ ᎠᎴ ᏰᎵᏇ ᎠᎩᏍᏗ ᏧᎬᏩᎶᏗᎢ ᏂᏛᎴᏅᏓ 0–9 ᎠᎴ X (10). ᎯᎠ [[European Article Number|ᎠᏛᎯᏍᏙᏗ]] [[Barcode]]ᏗᏎᏍᏗ ᎾᏍᎩᎾᎢ ᏗᎪᏪᎵ ᎠᎴ derived ᏂᏛᎴᏅᏓ ᎯᎠ ISBN ᎾᎥᎢ ᏭᎵᏍᎨᏗᏴ 978, ᎾᏍᎩᎾᎢ [[Bookland]] ᎠᎴ ᎪᎱᏍᏗ ᎨᏒ ᎢᏤ ᎠᏕᎸ ᏗᏎᎯᏍᏗ ᏎᏍᏗ.
+ᎾᏍᎩ ᏂᏗᎨᏒᎾ, ᎠᏂᏏᏴᏫᎭ ᎪᏪᎵ ᎨᏒᎢ ᏗᎪᎥᎯ ᎾᎥᎢ ᎠᏰᎵ ᏚᎾᏙᏢᏒ ᏰᎵᏊ ᏗᏙᎳᎩ ᎪᏪᎵ ᏎᏍᏗ, ᎠᎴ [[ISBN]], ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ ᏧᏓᎴᎿᎢ ᏂᎦᎥᎢ ᎦᏟᏌᏅ ᎦᎴᏴᏔᏅ ᏂᎦᎥᎢ ᎪᏪᎵ ᎠᏛᎯᏍᏔᏅ ᎾᎥᎢ participating ᏗᎦᎴᏴᏗᏍᎩ, ᎡᎶᎯ ᎠᏯᏖᎾ. ᎾᏍᎩ ᎨᏒᎢ ᎤᏓᏅᏖᎸ ᎾᎥᎢ ᎯᎠ <nowiki>ISBN</nowiki> ᎤᎾᏙᏢᎯ. ᎾᏍᎩ ᎤᎭ ᏅᎩ ᎢᎦᏛᎭ. ᎯᎠ ᎢᎬᏱ ᎢᎦᏛ ᎨᏒᎢ ᎯᎠ ᏙᏱᏗᏢ ᎦᏚᎲ ᎠᏍᏓᏩᏛᏍᏙᏗ, ᎯᎠ ᏔᎵᏁ ᎯᎠ [[publisher|ᏗᎦᎴᏴᏗᏍᎩ]] ᎠᏍᏓᏩᏛᏍᏙᏗ, ᎠᎴ ᎯᎠ ᏦᎢᏁ ᎯᎠ ᎦᏓ ᎦᏂᏴᏙ ᎠᏍᏓᏩᏛᏍᏙᏗ. ᎯᎠ ᎣᏂ ᎢᎦᏛ ᎨᏒᎢ checksum ᎠᎴ ᎠᏕᎸ ᏗᏎᎯᏍᏗ ᏎᏍᏗ ᎠᎴ ᏰᎵᏇ ᎠᎩᏍᏗ ᏧᎬᏩᎶᏗᎢ ᏂᏛᎴᏅᏓ 0–9 ᎠᎴ X (10). ᎯᎠ [[European Article Number|ᎠᏛᎯᏍᏙᏗ]] [[Barcode]] ᏗᏎᏍᏗ ᎾᏍᎩᎾᎢ ᏗᎪᏪᎵ ᎠᎴ derived ᏂᏛᎴᏅᏓ ᎯᎠ ISBN ᎾᎥᎢ ᏭᎵᏍᎨᏗᏴ 978, ᎾᏍᎩᎾᎢ [[Bookland]] ᎠᎴ ᎪᎱᏍᏗ ᎨᏒ ᎢᏤ ᎠᏕᎸ ᏗᏎᎯᏍᏗ ᏎᏍᏗ.
 
 ᎤᎪᏗᏗ ᎠᏰᎵ ᎤᏙᏢᏒ ᏗᎦᎴᏴᏗᏍᎩ, ᎭᏫᎾᏗᏢ ᏧᏂᎸᏫᏍᏓᏁᏗ ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ ᏥᏄᏍᏗ ᎠᏔᎴᏒ ᎠᎹᏱ ᏥᏄᏍᏗ ᎭᏫᎾᏗᏢ ᎠᏙᎷᏩᏘᏍᎬ ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ, ᎿᏛᎦ ᎾᏍᎩ ᏂᎨᏒᎾ ᎨᎳᏗᏓᏍᏗ ᎠᏂᎧᎵ ᎭᏫᎾᏗᏢ ᎯᎠ ISBN ᎢᏯhᏛᏁᎵᏓᏍᏗ. ᎤᏅᏌ ᎢᏳᏓᎵᎭ ᎠᏛᎯᏍᏙᏗ ᏗᎪᏪᎵ ᎦᏙ ᎤᏍᏗ ᎿᏛᎦ ᎾᏍᎩ ᏂᎨᏒᎾ ᎤᎭ ISBNs. ᎭᏫᎾᏗᏢ ᎤᏙᎯᏳ industrialized ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ ᎡᏆ ᏚᎾᎵᎪᏒ ᎠᏓᎾᏅᏗ ᏗᎪᏪᎵ, ᏯᏛᎿ ᏥᏄᏍᏗ ᏗᎪᎵᏰᏗ ᎪᏪᎵ, ᎠᏓᏓᎶᏙᏗ ᎠᎴ ᏐᎢ ᎬᏙᏗ-ᎠᏓᏅᏖᎸᏅ ᎬᏗ ᎪᏪᎳᏅᎯ ᏗᎪᏪᎵ, ᎠᎴ ᎾᎥᏂᎨᏍᏗ ᏂᎪᎯᎸᎢ ᎠᏓᏁᎸ ISBNs ᎾᎥᎢ ᏗᎦᎴᏴᏗᏍᎩ, ᎯᎠ ᎢᏴ ᎠᎾᏓᏁᎲ ᎯᎠ ᎠᎦᏙᎵ ᎤᎪᏗᏗ ᎤᏂᏩᏍᎩ Ꮎ ᎯᎠ ISBN ᎨᏒᎢ ᎠᏰᎵ ᏚᎾᏙᏢᏒ ᎠᎴ ᎧᎵᏬᎯ ᎢᏯhᏛᏁᎵᏓᏍᏗ, ᎬᏙᏗ Ꮭ ᏗᎦᏘᎸᏓ.
 
@@ -136,7 +136,7 @@
 * [[ISBNdb.com]]
 * [[Americana Exchange|Americana ᎦᏁᏟᏴᏍᏗ]]
 
-=== ᎪᏪᎵ ᏗᏓᎴᎾᏔᏅ ᏗᎦᏘᏌᏅᎩ iyahdvnelidasdi ===
+=== ᎪᏪᎵ ᏗᏓᎴᎾᏔᏅ ᏗᎦᏘᏌᏅᎩ ᎢᏯᏛᏁᎵᏓᏍᏗ ===
 * [[Dewey Decimal Classification|Dewey ᏎᏍᏗ ᏗᏓᎴᎾᏔᏅ ᏗᎦᏘᏌᏅᎩ]] (DDC)
 * [[Library of Congress Classification|ᎪᏪᎵ ᏕᎦᏅ ᏗᎪᎵᏰᏗ ᏩᏥᏂ ᏗᏂᎳᏫᎩ ᏗᏓᎴᎾᏔᏅ ᏗᎦᏘᏌᏅᎩ]] (LCC)
 * [[Chinese Library Classification|Chinese ᎪᏪᎵ ᏕᎦᏅ ᏗᎪᎵᏰᏗ ᏗᏓᎴᎾᏔᏅ ᏗᎦᏘᏌᏅᎩ]] (CLC)
