--- a/ᏗᎦᎪᏗ_ᏚᎾᏙᎥ_ᏙᎪᏪᎸ.mw
+++ b/ᏗᎦᎪᏗ_ᏚᎾᏙᎥ_ᏙᎪᏪᎸ.mw
@@ -73,8 +73,7 @@
 
 == Ꭻ ==
 * [[Tick weed|ᎫᎫ ᎩᎦᎨ ᎠᏥᎸᏍᎩ]] <ref name=h231/> - ''[[Coreopsis]]''
-* [[Beech|ᏚᏒ]] - ''[[Fagus]]''
-* [[Mulberry|ᏚᏩ]] - ''[[Moraceae]]'' (''[[Morus rubra]]'')
+* [[Rose|ᎫᏔᏍᏲᏍᏗ]] <ref>Howard 161</ref> - ''[[Rosa]]''
 
 == Ꭼ ==
 * [[Watermelon|ᎬᎩᏍᏗ]] - ''[[Citrullus lanatus]]''
@@ -154,6 +153,8 @@
 
 == Ꮪ ==
 * [[Bean|ᏚᎳ]] - ''[[Fabaceae]]''
+* [[Beech|ᏚᏒ]] - ''[[Fagus]]''
+* [[Mulberry|ᏚᏩ]] - ''[[Moraceae]]'' (''[[Morus rubra]]'')
 * [[Peanut|ᏚᏯ ᎠᏂᎳᏗᏍᎩ]] - ''[[Arachis hypogaea]]''
 
 == Ꮲ ==
