/* ᏓᏓᏚᎬ ᎪᏪᎵ */ testing

--- a/ᏗᎦᎪᏗ_ᏚᎾᏙᎥ_ᏙᎪᏪᎸ.mw
+++ b/ᏗᎦᎪᏗ_ᏚᎾᏙᎥ_ᏙᎪᏪᎸ.mw
@@ -206,7 +206,7 @@
 * [[List of garden plants]]
 
 == ᏓᏓᏚᎬ ᎪᏪᎵ ==
-{{reflist}}
+{{reflist|2}}
 
 == ᏫᏓᏎᏄᎢ ==
 * Howard, Gregg, ed. ''English/Cherokee Glossary''. Richardson, [[Texas|ᏅᏓᎩ]]: Various Indians Peoples Publishing, 2000. ISBN 1-884655-63-7.
